--- a/theme/dialog.css
+++ b/theme/dialog.css
@@ -172,23 +172,23 @@
 }
 
 .el-dialog__headerbtn .el-dialog__close {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 
 .el-dialog__headerbtn:focus .el-dialog__close, .el-dialog__headerbtn:hover .el-dialog__close{
-    color: #222d32;
+    color: #FFC0CB;
 }
 
 .el-dialog__title{
     line-height: 1;
     font-size: 16px;
     font-weight: 700;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
 }
 
 .el-dialog__body{
     padding: 30px 20px;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     font-size: 14px;
 }
 
@@ -229,91 +229,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
