--- a/theme/loading.css
+++ b/theme/loading.css
@@ -124,7 +124,7 @@
 }
 
 .el-loading-spinner .el-loading-text{
-  color: #222d32;
+  color: #FFC0CB;
   margin: 3px 0;
   font-size: 14px;
 }
@@ -140,7 +140,7 @@
   stroke-dasharray: 90, 150;
   stroke-dashoffset: 0;
   stroke-width: 2;
-  stroke: #222d32;
+  stroke: #FFC0CB;
   stroke-linecap: round;
 }
 
@@ -170,91 +170,91 @@
 }
 :root{
   /* Transition
-    -------------------------- */
+  -------------------------- */
   /* Colors
-    -------------------------- */
+  -------------------------- */
   /* Link
-    -------------------------- */
+  -------------------------- */
   /* Border
-    -------------------------- */
+  -------------------------- */
   /* Box-shadow
-    -------------------------- */
+  -------------------------- */
   /* Fill
-    -------------------------- */
+  -------------------------- */
   /* Font
-    -------------------------- */
+  -------------------------- */
   /* Size
-    -------------------------- */
+  -------------------------- */
   /* z-index
-    -------------------------- */
+  -------------------------- */
   /* Disable base
-    -------------------------- */
+  -------------------------- */
   /* Icon
-    -------------------------- */
+  -------------------------- */
   /* Checkbox
-    -------------------------- */
+  -------------------------- */
   /* Radio
-    -------------------------- */
+  -------------------------- */
   /* Select
-    -------------------------- */
+  -------------------------- */
   /* Alert
-    -------------------------- */
+  -------------------------- */
   /* Message Box
-    -------------------------- */
+  -------------------------- */
   /* Message
-    -------------------------- */
+  -------------------------- */
   /* Notification
-    -------------------------- */
+  -------------------------- */
   /* Input
-    -------------------------- */
+  -------------------------- */
   /* Cascader
-    -------------------------- */
+  -------------------------- */
   /* Group
-    -------------------------- */
+  -------------------------- */
   /* Tab
-    -------------------------- */
+  -------------------------- */
   /* Button
-    -------------------------- */
+  -------------------------- */
   /* cascader
-    -------------------------- */
+  -------------------------- */
   /* Switch
-   -------------------------- */
+ -------------------------- */
   /* Dialog
-   -------------------------- */
+ -------------------------- */
   /* Table
-   -------------------------- */
+ -------------------------- */
   /* Pagination
-   -------------------------- */
+ -------------------------- */
   /* Popover
-   -------------------------- */
+ -------------------------- */
   /* Tooltip
-    -------------------------- */
+  -------------------------- */
   /* Tag
-    -------------------------- */
+  -------------------------- */
   /* Dropdown
-    -------------------------- */
+  -------------------------- */
   /* Badge
-    -------------------------- */
+  -------------------------- */
   /* Card
-    --------------------------*/
+  --------------------------*/
   /* Slider
-    --------------------------*/
+  --------------------------*/
   /* Steps
-    --------------------------*/
+  --------------------------*/
   /* Menu
-    --------------------------*/
+  --------------------------*/
   /* Rate
-    --------------------------*/
+  --------------------------*/
   /* DatePicker
-    --------------------------*/
+  --------------------------*/
   /* Loading
-    --------------------------*/
+  --------------------------*/
   /* Scrollbar
-    --------------------------*/
+  --------------------------*/
   /* Carousel
-    --------------------------*/
+  --------------------------*/
   /* Collapse
-    --------------------------*/
+  --------------------------*/
   /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
