--- a/theme/select-dropdown.css
+++ b/theme/select-dropdown.css
@@ -93,7 +93,7 @@
 .el-select-dropdown{
     position: absolute;
     z-index: 1001;
-    border: solid 1px rgb(209, 221, 229);
+    border: solid 1px rgb(229, 209, 211);
     border-radius: 2px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
@@ -108,12 +108,12 @@
 .el-select-dropdown.is-multiple{}
 
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected{
-    color: #222d32;
+    color: #FFC0CB;
     background-color: #fff;
 }
 
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected.hover{
-    background-color: rgb(228, 233, 241);
+    background-color: rgb(241, 229, 228);
 }
 
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected::after{
@@ -146,91 +146,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
