--- a/theme/step.css
+++ b/theme/step.css
@@ -117,7 +117,7 @@
     display: inline-block;
     position: absolute;
     border-color: inherit;
-    background-color: rgb(191, 206, 217);
+    background-color: rgb(217, 191, 193);
 }
 
 .el-step__line.is-vertical{
@@ -174,8 +174,8 @@
 }
 
 .el-step__head.is-finish{
-    color: #222d32;
-    border-color: #222d32;
+    color: #FFC0CB;
+    border-color: #FFC0CB;
 }
 
 .el-step__head.is-error{
@@ -189,13 +189,13 @@
 }
 
 .el-step__head.is-wait{
-    color: rgb(191, 206, 217);
-    border-color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
+    border-color: rgb(217, 191, 193);
 }
 
 .el-step__head.is-process{
-    color: rgb(191, 206, 217);
-    border-color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
+    border-color: rgb(217, 191, 193);
 }
 
 .el-step__head.is-text{
@@ -206,8 +206,8 @@
 
 .el-step__head.is-text.is-finish{
     color: #fff;
-    background-color: #222d32;
-    border-color: #222d32;
+    background-color: #FFC0CB;
+    border-color: #FFC0CB;
 }
 
 .el-step__head.is-text.is-error{
@@ -223,15 +223,15 @@
 }
 
 .el-step__head.is-text.is-wait{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     background-color: #fff;
-    border-color: rgb(191, 206, 217);
+    border-color: rgb(217, 191, 193);
 }
 
 .el-step__head.is-text.is-process{
     color: #fff;
-    background-color: rgb(191, 206, 217);
-    border-color: rgb(191, 206, 217);
+    background-color: rgb(217, 191, 193);
+    border-color: rgb(217, 191, 193);
 }
 
 .el-step__main{
@@ -248,7 +248,7 @@
 
 .el-step__title.is-finish{
     font-weight: 700;
-    color: #222d32;
+    color: #FFC0CB;
 }
 
 .el-step__title.is-error{
@@ -263,12 +263,12 @@
 
 .el-step__title.is-wait{
     font-weight: 400;
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 
 .el-step__title.is-process{
     font-weight: 700;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
 }
 
 .el-step__description{
@@ -278,7 +278,7 @@
 }
 
 .el-step__description.is-finish{
-    color: #222d32;
+    color: #FFC0CB;
 }
 
 .el-step__description.is-error{
@@ -290,99 +290,99 @@
 }
 
 .el-step__description.is-wait{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 
 .el-step__description.is-process{
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
