--- a/theme/table.css
+++ b/theme/table.css
@@ -91,7 +91,7 @@
   --------------------------*/
 }
 .el-checkbox{
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     position: relative;
     cursor: pointer;
     display: inline-block;
@@ -113,8 +113,8 @@
     vertical-align: middle;
 }
 .el-checkbox__input.is-indeterminate .el-checkbox__inner{
-    background-color: #222d32;
-    border-color: rgb(0, 49, 71);
+    background-color: #FFC0CB;
+    border-color: rgb(254, 148, 166);
 }
 .el-checkbox__input.is-indeterminate .el-checkbox__inner::before{
     content: '';
@@ -130,37 +130,37 @@
     display: none;
 }
 .el-checkbox__input.is-focus .el-checkbox__inner{
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-checkbox__input.is-checked .el-checkbox__inner{
-    background-color: #222d32;
-    border-color: rgb(0, 49, 71);
+    background-color: #FFC0CB;
+    border-color: rgb(254, 148, 166);
 }
 .el-checkbox__input.is-checked .el-checkbox__inner::after{
     transform: rotate(45deg) scaleY(1);
 }
 .el-checkbox__input.is-disabled .el-checkbox__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     cursor: not-allowed;
 }
 .el-checkbox__input.is-disabled .el-checkbox__inner::after{
     cursor: not-allowed;
-    border-color: rgb(238, 242, 246);
+    border-color: rgb(246, 238, 238);
 }
 .el-checkbox__input.is-disabled .el-checkbox__inner + .el-checkbox__label{
     cursor: not-allowed;
 }
 .el-checkbox__input.is-disabled.is-checked .el-checkbox__inner{
-    background-color: rgb(209, 221, 229);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(229, 209, 211);
+    border-color: rgb(229, 209, 211);
 }
 .el-checkbox__input.is-disabled.is-checked .el-checkbox__inner::after{
     border-color: #fff;
 }
 .el-checkbox__input.is-disabled.is-indeterminate .el-checkbox__inner{
-    background-color: rgb(209, 221, 229);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(229, 209, 211);
+    border-color: rgb(229, 209, 211);
 }
 .el-checkbox__input.is-disabled.is-indeterminate .el-checkbox__inner::before{
     border-color: #fff;
@@ -172,7 +172,7 @@
 .el-checkbox__inner{
     display: inline-block;
     position: relative;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
     box-sizing: border-box;
     width: 18px;
@@ -183,7 +183,7 @@
                   background-color .25s cubic-bezier(.71,-.46,.29,1.46);
 }
 .el-checkbox__inner:hover{
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-checkbox__inner::after{
     box-sizing: content-box;
@@ -220,25 +220,25 @@
 .el-checkbox-button.is-checked{}
 .el-checkbox-button.is-checked .el-checkbox-button__inner{
     color: #fff;
-    background-color: #222d32;
-    border-color: #222d32;
-    box-shadow: -1px 0 0 0 #222d32;
+    background-color: #FFC0CB;
+    border-color: #FFC0CB;
+    box-shadow: -1px 0 0 0 #FFC0CB;
 }
 .el-checkbox-button.is-disabled{}
 .el-checkbox-button.is-disabled .el-checkbox-button__inner{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     cursor: not-allowed;
     background-image: none;
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     box-shadow: none;
 }
 .el-checkbox-button.is-focus{}
 .el-checkbox-button.is-focus .el-checkbox-button__inner{
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-checkbox-button:first-child .el-checkbox-button__inner{
-    border-left: 1px solid rgb(191, 206, 217);
+    border-left: 1px solid rgb(217, 191, 193);
     border-radius: 4px 0 0 4px;
     box-shadow: none !important;
 }
@@ -252,9 +252,9 @@
     vertical-align: middle;
     cursor: pointer;
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-left: 0;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     -webkit-appearance: none;
     text-align: center;
     box-sizing: border-box;
@@ -262,7 +262,7 @@
     margin: 0;
     position: relative;
     cursor: pointer;
-    transition: all .3s cubic-bezier(.645, .045, .355, 1);
+    transition: all .3s cubic-bezier(.645,.045,.355,1);
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -271,7 +271,7 @@
     border-radius: 0;
 }
 .el-checkbox-button__inner:hover{
-    color: #222d32;
+    color: #FFC0CB;
 }
 .el-checkbox-button__inner [class*="el-icon-"]{
     line-height: 0.9;
@@ -397,7 +397,7 @@
   --------------------------*/
 }
 .el-tag{
-    background-color: rgb(131, 148, 165);
+    background-color: rgb(165, 131, 131);
     display: inline-block;
     padding: 0 5px;
     height: 24px;
@@ -425,67 +425,67 @@
 }
 .el-tag .el-icon-close:hover{
     background-color: #fff;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 .el-tag--gray{
-    background-color: rgb(228, 233, 241);
-    border-color: rgb(228, 233, 241);
-    color: rgb(72, 90, 106);
+    background-color: rgb(241, 229, 228);
+    border-color: rgb(241, 229, 228);
+    color: rgb(106, 72, 73);
 }
 .el-tag--gray .el-tag__close:hover{
-    background-color: rgb(72, 90, 106);
+    background-color: rgb(106, 72, 73);
     color: #fff;
 }
 .el-tag--gray.is-hit{
-    border-color: rgb(72, 90, 106);
+    border-color: rgb(106, 72, 73);
 }
 .el-tag--primary{
-    background-color: rgba(0, 86, 128, 0.8);
-    border-color: rgba(0, 86, 128, 0.9);
-    color: white;
+    background-color: rgba(255, 192, 203, 0.1);
+    border-color: rgba(255, 192, 203, 0.2);
+    color: #FFC0CB;
 }
 .el-tag--primary .el-tag__close:hover{
-    background-color: white;
+    background-color: #FFC0CB;
     color: #fff;
 }
 .el-tag--primary.is-hit{
-    border-color: white;
+    border-color: #FFC0CB;
 }
 .el-tag--success{
-    background-color: rgba(18, 206, 102, 0.8);
-    border-color: rgba(18, 206, 102, 0.9);
-    color: white;
+    background-color: rgba(18,206,102,0.10);
+    border-color: rgba(18,206,102,0.20);
+    color: #13ce66;
 }
 .el-tag--success .el-tag__close:hover{
-    background-color: white;
+    background-color: #13ce66;
     color: #fff;
 }
 .el-tag--success.is-hit{
-    border-color: white;
+    border-color: #13ce66;
 }
 .el-tag--warning{
-    background-color: rgba(247, 186, 41, 0.8);
-    border-color: rgba(247, 186, 41, 0.9);
-    color: white;
+    background-color: rgba(247,186,41,0.10);
+    border-color: rgba(247,186,41,0.20);
+    color: #f7ba2a;
 }
 .el-tag--warning .el-tag__close:hover{
-    background-color: white;
+    background-color: #f7ba2a;
     color: #fff;
 }
 .el-tag--warning.is-hit{
-    border-color: white;
+    border-color: #f7ba2a;
 }
 .el-tag--danger{
-    background-color: rgba(255, 73, 73, 0.8);
-    border-color: rgba(255, 73, 73, 0.9);
-    color: white;
+    background-color: rgba(255,73,73,0.10);
+    border-color: rgba(255,73,73,0.20);
+    color: #ff4949;
 }
 .el-tag--danger .el-tag__close:hover{
-    background-color: white;
+    background-color: #ff4949;
     color: #fff;
 }
 .el-tag--danger.is-hit{
-    border-color: white;
+    border-color: #ff4949;
 }
 :root{
     /* Transition
@@ -585,9 +585,9 @@
     width: 100%;
     max-width: 100%;
     background-color: #fff;
-    border: 1px solid rgb(223, 231, 236);
+    border: 1px solid rgb(236, 223, 224);
     font-size: 14px;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
 }
 
 .el-table .el-tooltip.cell{
@@ -617,7 +617,7 @@
 }
 
 .el-table th.is-leaf, .el-table td{
-    border-bottom: 1px solid rgb(223, 231, 236);
+    border-bottom: 1px solid rgb(236, 223, 224);
 }
 
 .el-table th.gutter, .el-table td.gutter{
@@ -638,7 +638,7 @@
     bottom: 0;
     width: 100%;
     height: 1px;
-    background-color: rgb(223, 231, 236);
+    background-color: rgb(236, 223, 224);
     z-index: 1;
 }
 
@@ -649,7 +649,7 @@
     right: 0;
     width: 1px;
     height: 100%;
-    background-color: rgb(223, 231, 236);
+    background-color: rgb(236, 223, 224);
     z-index: 1;
 }
 
@@ -659,7 +659,7 @@
 }
 
 .el-table th{
-    background-color: rgb(238, 242, 246);
+    background-color: rgb(246, 238, 238);
     text-align: left;
 }
 
@@ -701,7 +701,7 @@
 }
 
 .el-table th > .cell.highlight{
-    color: #222d32;
+    color: #FFC0CB;
 }
 
 .el-table .caret-wrapper{
@@ -732,24 +732,24 @@
     top: 9px;
     border-top: none;
     border-right: 5px solid transparent;
-    border-bottom: 5px solid rgb(151, 171, 190);
+    border-bottom: 5px solid rgb(190, 151, 152);
     border-left: 5px solid transparent;
 }
 
 .el-table .sort-caret.descending{
     bottom: 9px;
-    border-top: 5px solid rgb(151, 171, 190);
+    border-top: 5px solid rgb(190, 151, 152);
     border-right: 5px solid transparent;
     border-bottom: none;
     border-left: 5px solid transparent;
 }
 
 .el-table .ascending .sort-caret.ascending{
-    border-bottom-color: rgb(72, 90, 106);
+    border-bottom-color: rgb(106, 72, 73);
 }
 
 .el-table .descending .sort-caret.descending{
-    border-top-color: rgb(72, 90, 106);
+    border-top-color: rgb(106, 72, 73);
 }
 
 .el-table td.gutter{
@@ -794,7 +794,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    color: rgb(94, 119, 130);
+    color: rgb(130, 94, 100);
 }
 
 .el-table__expand-column .cell {
@@ -825,12 +825,12 @@
 
 .el-table__expanded-cell{
     padding: 20px 50px;
-    background-color: rgb(251, 251, 251);
+    background-color: rgb(255, 254, 254);
     box-shadow: inset 0 2px 0 #f4f4f4;
 }
 
 .el-table__expanded-cell:hover{
-    background-color: rgb(251, 251, 251) !important;
+    background-color: rgb(255, 254, 254) !important;
 }
 
 .el-table--fit{
@@ -843,11 +843,11 @@
 }
 
 .el-table--border th, .el-table--border td {
-    border-right: 1px solid rgb(223, 231, 236);
+    border-right: 1px solid rgb(236, 223, 224);
 }
 
 .el-table--border th{
-    border-bottom: 1px solid rgb(223, 231, 236);
+    border-bottom: 1px solid rgb(236, 223, 224);
 }
 
 .el-table__fixed, .el-table__fixed-right{
@@ -865,7 +865,7 @@
     bottom: 0;
     width: 100%;
     height: 1px;
-    background-color: rgb(223, 231, 236);
+    background-color: rgb(236, 223, 224);
     z-index: 4;
 }
 
@@ -873,8 +873,8 @@
     position: absolute;
     top: -1px;
     right: 0;
-    background-color: rgb(238, 242, 246);
-    border-bottom: 1px solid rgb(223, 231, 236);
+    background-color: rgb(246, 238, 238);
+    border-bottom: 1px solid rgb(236, 223, 224);
 }
 
 .el-table__fixed-right{
@@ -897,8 +897,8 @@
 }
 
 .el-table__fixed-header-wrapper thead div{
-    background-color: rgb(238, 242, 246);
-    color: rgb(31, 48, 61);
+    background-color: rgb(246, 238, 238);
+    color: rgb(61, 31, 33);
 }
 
 .el-table__fixed-footer-wrapper{
@@ -909,9 +909,9 @@
 }
 
 .el-table__fixed-footer-wrapper tbody td{
-    border-top: 1px solid rgb(223, 231, 236);
-    background-color: rgb(251, 251, 251);
-    color: rgb(31, 48, 61);
+    border-top: 1px solid rgb(236, 223, 224);
+    background-color: rgb(255, 254, 254);
+    color: rgb(61, 31, 33);
 }
 
 .el-table__fixed-body-wrapper{
@@ -931,7 +931,7 @@
 }
 
 .el-table__footer-wrapper td {
-    border-top: 1px solid rgb(223, 231, 236);
+    border-top: 1px solid rgb(236, 223, 224);
 }
 
 .el-table__header, .el-table__body, .el-table__footer{
@@ -943,13 +943,13 @@
 }
 
 .el-table__header-wrapper thead div, .el-table__footer-wrapper thead div{
-    background-color: rgb(238, 242, 246);
-    color: rgb(31, 48, 61);
+    background-color: rgb(246, 238, 238);
+    color: rgb(61, 31, 33);
 }
 
 .el-table__header-wrapper tbody td, .el-table__footer-wrapper tbody td{
-    background-color: rgb(251, 251, 251);
-    color: rgb(31, 48, 61);
+    background-color: rgb(255, 254, 254);
+    color: rgb(61, 31, 33);
 }
 
 .el-table__body-wrapper{
@@ -967,15 +967,15 @@
 }
 
 .el-table--striped .el-table__body tr.el-table__row--striped.current-row td{
-    background: rgb(237, 238, 239);
+    background: rgb(255, 250, 251);
 }
 
 .el-table__body tr.hover-row > td {
-    background-color: rgb(238, 242, 246);
+    background-color: rgb(246, 238, 238);
 }
 
 .el-table__body tr.current-row > td {
-    background: rgb(237, 238, 239);
+    background: rgb(255, 250, 251);
 }
 
 .el-table__column-resize-proxy{
@@ -984,7 +984,7 @@
     top: 0;
     bottom: 0;
     width: 0;
-    border-left: 1px solid rgb(223, 231, 236);
+    border-left: 1px solid rgb(236, 223, 224);
     z-index: 10;
 }
 
@@ -996,7 +996,7 @@
 }
 
 .el-table__column-filter-trigger i{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 
 .el-table--enable-row-transition .el-table__body td {
@@ -1004,7 +1004,7 @@
 }
 
 .el-table--enable-row-hover .el-table__body tr:hover > td {
-    background-color: rgb(238, 242, 246);
+    background-color: rgb(246, 238, 238);
     background-clip: padding-box;
 }
 
@@ -1014,91 +1014,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
