--- a/theme/tag.css
+++ b/theme/tag.css
@@ -91,7 +91,7 @@
 }
 
 .el-tag{
-    background-color: rgb(131, 148, 165);
+    background-color: rgb(165, 131, 131);
     display: inline-block;
     padding: 0 5px;
     height: 24px;
@@ -121,170 +121,170 @@
 
 .el-tag .el-icon-close:hover{
     background-color: #fff;
-    color: rgb(131, 148, 165)
+    color: rgb(165, 131, 131)
 }
 
 .el-tag--gray{
-    background-color: rgb(228, 233, 241);
-    border-color: rgb(228, 233, 241);
-    color: rgb(72, 90, 106)
+    background-color: rgb(241, 229, 228);
+    border-color: rgb(241, 229, 228);
+    color: rgb(106, 72, 73)
 }
 
 .el-tag--gray .el-tag__close:hover{
-    background-color: rgb(72, 90, 106);
+    background-color: rgb(106, 72, 73);
     color: #fff
 }
 
 .el-tag--gray.is-hit{
-    border-color: rgb(72, 90, 106)
+    border-color: rgb(106, 72, 73)
 }
 
 .el-tag--primary{
-    background-color: rgba(0, 86, 128, 0.8);
-    border-color: rgba(0, 86, 128, 0.9);
-    color: white
+    background-color: rgba(255, 192, 203, 0.1);
+    border-color: rgba(255, 192, 203, 0.2);
+    color: #FFC0CB
 }
 
 .el-tag--primary .el-tag__close:hover{
-    background-color: white;
+    background-color: #FFC0CB;
     color: #fff
 }
 
 .el-tag--primary.is-hit{
-    border-color: white
+    border-color: #FFC0CB
 }
 
 .el-tag--success{
-    background-color: rgba(18, 206, 102, 0.8);
-    border-color: rgba(18, 206, 102, 0.9);
-    color: white
+    background-color: rgba(18,206,102,0.10);
+    border-color: rgba(18,206,102,0.20);
+    color: #13ce66
 }
 
 .el-tag--success .el-tag__close:hover{
-    background-color: white;
+    background-color: #13ce66;
     color: #fff
 }
 
 .el-tag--success.is-hit{
-    border-color: white
+    border-color: #13ce66
 }
 
 .el-tag--warning{
-    background-color: rgba(247, 186, 41, 0.8);
-    border-color: rgba(247, 186, 41, 0.9);
-    color: white
+    background-color: rgba(247,186,41,0.10);
+    border-color: rgba(247,186,41,0.20);
+    color: #f7ba2a
 }
 
 .el-tag--warning .el-tag__close:hover{
-    background-color: white;
+    background-color: #f7ba2a;
     color: #fff
 }
 
 .el-tag--warning.is-hit{
-    border-color: white
+    border-color: #f7ba2a
 }
 
 .el-tag--danger{
-    background-color: rgba(255, 73, 73, 0.8);
-    border-color: rgba(255, 73, 73, 0.9);
-    color: white
+    background-color: rgba(255,73,73,0.10);
+    border-color: rgba(255,73,73,0.20);
+    color: #ff4949
 }
 
 .el-tag--danger .el-tag__close:hover{
-    background-color: white;
+    background-color: #ff4949;
     color: #fff
 }
 
 .el-tag--danger.is-hit{
-    border-color: white
+    border-color: #ff4949
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
