--- a/theme.css
+++ b/theme.css
@@ -11,7 +11,7 @@
 
   /* Colors
   -------------------------- */
-  --color-primary: #20a0ff;
+  --color-primary: #FFC0CB;
 
   --color-success: #13ce66;
   --color-warning: #f7ba2a;
