--- a/theme/button.css
+++ b/theme/button.css
@@ -96,9 +96,9 @@
     white-space: nowrap;
     cursor: pointer;
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-color: #c4c4c4;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     -webkit-appearance: none;
     text-align: center;
     box-sizing: border-box;
@@ -117,13 +117,13 @@
 }
 
 .el-button:hover, .el-button:focus{
-    color: #222d32;
-    border-color: #222d32;
+    color: #FFC0CB;
+    border-color: #FFC0CB;
 }
 
 .el-button:active{
-    color: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    color: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
     outline: none;
 }
 
@@ -157,11 +157,11 @@
 .el-button.is-disabled{}
 
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     cursor: not-allowed;
     background-image: none;
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
 }
 
 .el-button.is-disabled.el-button--text{
@@ -172,71 +172,71 @@
 
 .el-button.is-disabled.is-plain, .el-button.is-disabled.is-plain:hover, .el-button.is-disabled.is-plain:focus{
     background-color: #fff;
-    border-color: rgb(209, 221, 229);
-    color: rgb(191, 206, 217);
+    border-color: rgb(229, 209, 211);
+    color: rgb(217, 191, 193);
 }
 
 .el-button.is-active{
-    color: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    color: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
 }
 
 .el-button.is-plain{}
 
 .el-button.is-plain:hover, .el-button.is-plain:focus{
     background: #fff;
-    border-color: #222d32;
-    color: #222d32;
+    border-color: #FFC0CB;
+    color: #FFC0CB;
 }
 
 .el-button.is-plain:active{
     background: #fff;
-    border-color: rgb(31, 41, 45);
-    color: rgb(31, 41, 45);
+    border-color: rgb(230, 173, 183);
+    color: rgb(230, 173, 183);
     outline: none;
 }
 
 .el-button--primary{
     color: #fff;
-    background-color: #222d32;
-    border-color: #222d32;
+    background-color: #FFC0CB;
+    border-color: #FFC0CB;
 }
 
 .el-button--primary:hover, .el-button--primary:focus{
-    background: rgb(78, 87, 91);
-    border-color: rgb(78, 87, 91);
+    background: rgb(255, 205, 213);
+    border-color: rgb(255, 205, 213);
     color: #fff;
 }
 
 .el-button--primary:active{
-    background: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    background: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
     color: #fff;
     outline: none;
 }
 
 .el-button--primary.is-active{
-    background: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    background: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
     color: #fff;
 }
 
 .el-button--primary.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
     background: #fff;
-    border-color: #222d32;
-    color: #222d32;
+    border-color: #FFC0CB;
+    color: #FFC0CB;
 }
 
 .el-button--primary.is-plain:active{
     background: #fff;
-    border-color: rgb(31, 41, 45);
-    color: rgb(31, 41, 45);
+    border-color: rgb(230, 173, 183);
+    color: rgb(230, 173, 183);
     outline: none;
 }
 
@@ -267,8 +267,8 @@
 
 .el-button--success.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
@@ -311,8 +311,8 @@
 
 .el-button--warning.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
@@ -355,8 +355,8 @@
 
 .el-button--danger.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
@@ -399,8 +399,8 @@
 
 .el-button--info.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
@@ -436,18 +436,18 @@
 
 .el-button--text{
     border: none;
-    color: #222d32;
+    color: #FFC0CB;
     background: transparent;
     padding-left: 0;
     padding-right: 0;
 }
 
 .el-button--text:hover, .el-button--text:focus{
-    color: rgb(78, 87, 91);
+    color: rgb(255, 205, 213);
 }
 
 .el-button--text:active{
-    color: rgb(31, 41, 45);
+    color: rgb(230, 173, 183);
 }
 
 .el-button-group{
@@ -575,91 +575,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
