--- a/theme/color-picker.css
+++ b/theme/color-picker.css
@@ -379,7 +379,7 @@
 
     font-size: 12px;
 
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
 }
 
 .el-color-dropdown__btn {
@@ -412,16 +412,16 @@
 
 .el-color-dropdown__btn:hover {
 
-    color: #222d32;
+    color: #FFC0CB;
 
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 
 .el-color-dropdown__link-btn {
 
     cursor: pointer;
 
-    color: #222d32;
+    color: #FFC0CB;
 
     text-decoration: none;
 
@@ -432,7 +432,7 @@
 
 .el-color-dropdown__link-btn:hover {
 
-    color: rgb(78, 87, 91);
+    color: rgb(255, 205, 213);
 }
 
 .el-color-picker {
@@ -538,141 +538,141 @@
 
     background-color: #fff;
 
-    border: 1px solid rgb(209, 221, 229);
+    border: 1px solid rgb(229, 209, 211);
 
     box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .12);
 }
 :root {
 
     /* Transition
-    -------------------------- */
+  -------------------------- */
 
     /* Colors
-    -------------------------- */
+  -------------------------- */
 
     /* Link
-    -------------------------- */
+  -------------------------- */
 
     /* Border
-    -------------------------- */
+  -------------------------- */
 
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
 
     /* Fill
-    -------------------------- */
+  -------------------------- */
 
     /* Font
-    -------------------------- */
+  -------------------------- */
 
     /* Size
-    -------------------------- */
+  -------------------------- */
 
     /* z-index
-    -------------------------- */
+  -------------------------- */
 
     /* Disable base
-    -------------------------- */
+  -------------------------- */
 
     /* Icon
-    -------------------------- */
+  -------------------------- */
 
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
 
     /* Radio
-    -------------------------- */
+  -------------------------- */
 
     /* Select
-    -------------------------- */
+  -------------------------- */
 
     /* Alert
-    -------------------------- */
+  -------------------------- */
 
     /* Message Box
-    -------------------------- */
+  -------------------------- */
 
     /* Message
-    -------------------------- */
+  -------------------------- */
 
     /* Notification
-    -------------------------- */
+  -------------------------- */
 
     /* Input
-    -------------------------- */
+  -------------------------- */
 
     /* Cascader
-    -------------------------- */
+  -------------------------- */
 
     /* Group
-    -------------------------- */
+  -------------------------- */
 
     /* Tab
-    -------------------------- */
+  -------------------------- */
 
     /* Button
-    -------------------------- */
+  -------------------------- */
 
     /* cascader
-    -------------------------- */
+  -------------------------- */
 
     /* Switch
-   -------------------------- */
+ -------------------------- */
 
     /* Dialog
-   -------------------------- */
+ -------------------------- */
 
     /* Table
-   -------------------------- */
+ -------------------------- */
 
     /* Pagination
-   -------------------------- */
+ -------------------------- */
 
     /* Popover
-   -------------------------- */
+ -------------------------- */
 
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
 
     /* Tag
-    -------------------------- */
+  -------------------------- */
 
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
 
     /* Badge
-    -------------------------- */
+  -------------------------- */
 
     /* Card
-    --------------------------*/
+  --------------------------*/
 
     /* Slider
-    --------------------------*/
+  --------------------------*/
 
     /* Steps
-    --------------------------*/
+  --------------------------*/
 
     /* Menu
-    --------------------------*/
+  --------------------------*/
 
     /* Rate
-    --------------------------*/
+  --------------------------*/
 
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
 
     /* Loading
-    --------------------------*/
+  --------------------------*/
 
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
 
     /* Carousel
-    --------------------------*/
+  --------------------------*/
 
     /* Collapse
-    --------------------------*/
+  --------------------------*/
 
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
