--- a/theme/dropdown.css
+++ b/theme/dropdown.css
@@ -192,9 +192,9 @@
     white-space: nowrap;
     cursor: pointer;
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-color: #c4c4c4;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     -webkit-appearance: none;
     text-align: center;
     box-sizing: border-box;
@@ -211,12 +211,12 @@
     margin-left: 10px;
 }
 .el-button:hover, .el-button:focus{
-    color: #222d32;
-    border-color: #222d32;
+    color: #FFC0CB;
+    border-color: #FFC0CB;
 }
 .el-button:active{
-    color: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    color: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
     outline: none;
 }
 .el-button::-moz-focus-inner{
@@ -243,11 +243,11 @@
 }
 .el-button.is-disabled{}
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     cursor: not-allowed;
     background-image: none;
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
 }
 .el-button.is-disabled.el-button--text{
     background-color: transparent;
@@ -255,60 +255,60 @@
 .el-button.is-disabled.is-plain{}
 .el-button.is-disabled.is-plain, .el-button.is-disabled.is-plain:hover, .el-button.is-disabled.is-plain:focus{
     background-color: #fff;
-    border-color: rgb(209, 221, 229);
-    color: rgb(191, 206, 217);
+    border-color: rgb(229, 209, 211);
+    color: rgb(217, 191, 193);
 }
 .el-button.is-active{
-    color: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    color: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
 }
 .el-button.is-plain{}
 .el-button.is-plain:hover, .el-button.is-plain:focus{
     background: #fff;
-    border-color: #222d32;
-    color: #222d32;
+    border-color: #FFC0CB;
+    color: #FFC0CB;
 }
 .el-button.is-plain:active{
     background: #fff;
-    border-color: rgb(31, 41, 45);
-    color: rgb(31, 41, 45);
+    border-color: rgb(230, 173, 183);
+    color: rgb(230, 173, 183);
     outline: none;
 }
 .el-button--primary{
     color: #fff;
-    background-color: #222d32;
-    border-color: #222d32;
+    background-color: #FFC0CB;
+    border-color: #FFC0CB;
 }
 .el-button--primary:hover, .el-button--primary:focus{
-    background: rgb(78, 87, 91);
-    border-color: rgb(78, 87, 91);
+    background: rgb(255, 205, 213);
+    border-color: rgb(255, 205, 213);
     color: #fff;
 }
 .el-button--primary:active{
-    background: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    background: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
     color: #fff;
     outline: none;
 }
 .el-button--primary.is-active{
-    background: rgb(31, 41, 45);
-    border-color: rgb(31, 41, 45);
+    background: rgb(230, 173, 183);
+    border-color: rgb(230, 173, 183);
     color: #fff;
 }
 .el-button--primary.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
     background: #fff;
-    border-color: #222d32;
-    color: #222d32;
+    border-color: #FFC0CB;
+    color: #FFC0CB;
 }
 .el-button--primary.is-plain:active{
     background: #fff;
-    border-color: rgb(31, 41, 45);
-    color: rgb(31, 41, 45);
+    border-color: rgb(230, 173, 183);
+    color: rgb(230, 173, 183);
     outline: none;
 }
 .el-button--success{
@@ -334,8 +334,8 @@
 }
 .el-button--success.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
     background: #fff;
@@ -371,8 +371,8 @@
 }
 .el-button--warning.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
     background: #fff;
@@ -408,8 +408,8 @@
 }
 .el-button--danger.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
     background: #fff;
@@ -445,8 +445,8 @@
 }
 .el-button--info.is-plain{
     background: #fff;
-    border: 1px solid rgb(191, 206, 217);
-    color: rgb(31, 48, 61);
+    border: 1px solid rgb(217, 191, 193);
+    color: rgb(61, 31, 33);
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
     background: #fff;
@@ -476,16 +476,16 @@
 }
 .el-button--text{
     border: none;
-    color: #222d32;
+    color: #FFC0CB;
     background: transparent;
     padding-left: 0;
     padding-right: 0;
 }
 .el-button--text:hover, .el-button--text:focus{
-    color: rgb(78, 87, 91);
+    color: rgb(255, 205, 213);
 }
 .el-button--text:active{
-    color: rgb(31, 41, 45);
+    color: rgb(230, 173, 183);
 }
 .el-button-group{
     display: inline-block;
@@ -577,7 +577,7 @@
 .el-dropdown{
     display: inline-block;
     position: relative;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     font-size: 14px;
 }
 
@@ -606,7 +606,7 @@
 .el-dropdown-menu{
     margin: 5px 0;
     background-color: #fff;
-    border: 1px solid rgb(209, 221, 229);
+    border: 1px solid rgb(229, 209, 211);
     box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .12);
     padding: 6px 0;
     z-index: 10;
@@ -625,20 +625,20 @@
 }
 
 .el-dropdown-menu__item:not(.is-disabled):hover{
-    background-color: rgb(228, 233, 241);
-    color: rgb(72, 90, 106);
+    background-color: rgb(241, 229, 228);
+    color: rgb(106, 72, 73);
 }
 
 .el-dropdown-menu__item.is-disabled{
     cursor: default;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     pointer-events: none;
 }
 
 .el-dropdown-menu__item--divided{
     position: relative;
     margin-top: 6px;
-    border-top: 1px solid rgb(209, 221, 229);
+    border-top: 1px solid rgb(229, 209, 211);
 }
 
 .el-dropdown-menu__item--divided:before{
@@ -650,91 +650,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
