--- a/theme/input-number.css
+++ b/theme/input-number.css
@@ -97,23 +97,23 @@
     width: 100%
 }
 .el-input.is-disabled .el-input__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-    color: rgb(191, 206, 217)
+    color: rgb(217, 191, 193)
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-    color: rgb(191, 206, 217)
+    color: rgb(217, 191, 193)
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-    color: rgb(191, 206, 217)
+    color: rgb(217, 191, 193)
 }
 .el-input.is-active .el-input__inner{
     outline: none;
-    border-color: #222d32
+    border-color: #FFC0CB
 }
 .el-input__inner{
     -webkit-appearance: none;
@@ -122,33 +122,33 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     box-sizing: border-box;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     display: inline-block;
     font-size: inherit;
     height: 36px;
     line-height: 1;
     outline: none;
     padding: 3px 10px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
     width: 100%
 }
 .el-input__inner::-webkit-input-placeholder{
-    color: rgb(151, 171, 190)
+    color: rgb(190, 151, 152)
 }
 .el-input__inner:-ms-input-placeholder{
-    color: rgb(151, 171, 190)
+    color: rgb(190, 151, 152)
 }
 .el-input__inner::placeholder{
-    color: rgb(151, 171, 190)
+    color: rgb(190, 151, 152)
 }
 .el-input__inner:hover{
-    border-color: rgb(131, 148, 165)
+    border-color: rgb(165, 131, 131)
 }
 .el-input__inner:focus{
     outline: none;
-    border-color: #222d32
+    border-color: #FFC0CB
 }
 .el-input__icon{
     position: absolute;
@@ -157,7 +157,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     transition: all .3s
 }
 .el-input__icon:after{
@@ -173,10 +173,10 @@
 .el-input__icon.is-clickable{}
 .el-input__icon.is-clickable:hover{
     cursor: pointer;
-    color: rgb(131, 148, 165)
+    color: rgb(165, 131, 131)
 }
 .el-input__icon.is-clickable:hover + .el-input__inner{
-    border-color: rgb(131, 148, 165)
+    border-color: rgb(165, 131, 131)
 }
 .el-input--large{
     font-size: 16px
@@ -207,12 +207,12 @@
     display: table-cell
 }
 .el-input-group__append, .el-input-group__prepend{
-    background-color: rgb(251, 251, 251);
-    color: rgb(151, 171, 190);
+    background-color: rgb(255, 254, 254);
+    color: rgb(190, 151, 152);
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
     padding: 0 10px;
     width: 1px;
@@ -256,19 +256,19 @@
     vertical-align: bottom
 }
 .el-textarea.is-disabled .el-textarea__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-    color: rgb(191, 206, 217)
+    color: rgb(217, 191, 193)
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-    color: rgb(191, 206, 217)
+    color: rgb(217, 191, 193)
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-    color: rgb(191, 206, 217)
+    color: rgb(217, 191, 193)
 }
 .el-textarea__inner{
     display: block;
@@ -278,28 +278,28 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     background-color: #fff;
     background-image: none;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1)
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1)
 }
 .el-textarea__inner::-webkit-input-placeholder{
-    color: rgb(151, 171, 190)
+    color: rgb(190, 151, 152)
 }
 .el-textarea__inner:-ms-input-placeholder{
-    color: rgb(151, 171, 190)
+    color: rgb(190, 151, 152)
 }
 .el-textarea__inner::placeholder{
-    color: rgb(151, 171, 190)
+    color: rgb(190, 151, 152)
 }
 .el-textarea__inner:hover{
-    border-color: rgb(131, 148, 165)
+    border-color: rgb(165, 131, 131)
 }
 .el-textarea__inner:focus{
     outline: none;
-    border-color: #222d32
+    border-color: #FFC0CB
 }
 :root{
     /* Transition
@@ -416,38 +416,38 @@
 }
 
 .el-input-number.is-disabled .el-input-number__increase, .el-input-number.is-disabled .el-input-number__decrease{
-    border-color: rgb(209, 221, 229);
-    color: rgb(209, 221, 229)
+    border-color: rgb(229, 209, 211);
+    color: rgb(229, 209, 211)
 }
 
 .el-input-number.is-disabled .el-input-number__increase:hover, .el-input-number.is-disabled .el-input-number__decrease:hover{
-    color: rgb(209, 221, 229);
+    color: rgb(229, 209, 211);
     cursor: not-allowed
 }
 
 .el-input-number__increase, .el-input-number__decrease{
     height: auto;
-    border-left: 1px solid rgb(191, 206, 217);
+    border-left: 1px solid rgb(217, 191, 193);
     width: 36px;
     line-height: 34px;
     top: 1px;
     text-align: center;
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
     cursor: pointer;
     position: absolute;
     z-index: 1
 }
 
 .el-input-number__increase:hover, .el-input-number__decrease:hover{
-    color: #222d32
+    color: #FFC0CB
 }
 
 .el-input-number__increase:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled), .el-input-number__decrease:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled){
-    border-color: #222d32
+    border-color: #FFC0CB
 }
 
 .el-input-number__increase.is-disabled, .el-input-number__decrease.is-disabled{
-    color: rgb(209, 221, 229);
+    color: rgb(229, 209, 211);
     cursor: not-allowed
 }
 
@@ -496,91 +496,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
