--- a/theme/menu.css
+++ b/theme/menu.css
@@ -100,7 +100,7 @@
   height: 56px;
   line-height: 56px;
   font-size: 14px;
-  color: rgb(72, 90, 106);
+  color: rgb(106, 72, 73);
   padding: 0 20px;
   cursor: pointer;
   position: relative;
@@ -115,7 +115,7 @@
   position: relative;
   margin: 0;
   padding-left: 0;
-  background-color: rgb(238, 242, 246);
+  background-color: rgb(246, 238, 238);
 }
 
 .el-menu li{
@@ -123,23 +123,23 @@
 }
 
 .el-menu--dark{
-  background-color: rgb(50, 68, 87);
+  background-color: rgb(87, 51, 50);
 }
 
 .el-menu--dark .el-menu-item, .el-menu--dark .el-submenu__title{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 
 .el-menu--dark .el-menu-item:hover, .el-menu--dark .el-submenu__title:hover{
-  background-color: rgb(72, 90, 106);
+  background-color: rgb(106, 72, 73);
 }
 
 .el-menu--dark .el-submenu .el-menu{
-  background-color: rgb(31, 48, 61);
+  background-color: rgb(61, 31, 33);
 }
 
 .el-menu--dark .el-submenu .el-menu .el-menu-item:hover{
-  background-color: rgb(72, 90, 106);
+  background-color: rgb(106, 72, 73);
 }
 
 .el-menu--horizontal{}
@@ -160,7 +160,7 @@
 }
 
 .el-menu--horizontal .el-menu-item:hover{
-  background-color: rgb(209, 221, 229);
+  background-color: rgb(229, 209, 211);
 }
 
 .el-menu--horizontal .el-submenu{
@@ -172,7 +172,7 @@
   position: absolute;
   top: 65px;
   left: 0;
-  border: 1px solid rgb(209, 221, 229);
+  border: 1px solid rgb(229, 209, 211);
   padding: 5px 0;
   background-color: #fff;
   z-index: 100;
@@ -198,34 +198,34 @@
   position: static;
   vertical-align: middle;
   margin-left: 5px;
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
   margin-top: -3px;
 }
 
 .el-menu--horizontal .el-menu-item:hover, .el-menu--horizontal .el-submenu__title:hover{
-  background-color: rgb(238, 242, 246);
+  background-color: rgb(246, 238, 238);
 }
 
 .el-menu--horizontal > .el-menu-item:hover, .el-menu--horizontal > .el-submenu:hover .el-submenu__title, .el-menu--horizontal > .el-submenu.is-active .el-submenu__title{
-  border-bottom: 5px solid #222d32;
+  border-bottom: 5px solid #FFC0CB;
 }
 
 .el-menu--horizontal.el-menu--dark{}
 
 .el-menu--horizontal.el-menu--dark .el-menu-item:hover, .el-menu--horizontal.el-menu--dark .el-submenu__title:hover{
-  background-color: rgb(50, 68, 87);
+  background-color: rgb(87, 51, 50);
 }
 
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item, .el-menu--horizontal.el-menu--dark .el-submenu .el-submenu-title{
-  color: rgb(72, 90, 106);
+  color: rgb(106, 72, 73);
 }
 
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item:hover, .el-menu--horizontal.el-menu--dark .el-submenu .el-submenu-title:hover{
-  background-color: rgb(209, 221, 229);
+  background-color: rgb(229, 209, 211);
 }
 
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item.is-active{
-  color: #222d32;
+  color: #FFC0CB;
 }
 
 .el-menu-item [class^="el-icon-"]{
@@ -242,11 +242,11 @@
 }
 
 .el-menu-item:hover{
-  background-color: rgb(209, 221, 229);
+  background-color: rgb(229, 209, 211);
 }
 
 .el-menu-item.is-active{
-  color: #222d32;
+  color: #FFC0CB;
 }
 
 .el-submenu [class^="el-icon-"]{
@@ -255,7 +255,7 @@
 }
 
 .el-submenu .el-menu{
-  background-color: rgb(228, 233, 241);
+  background-color: rgb(241, 229, 228);
 }
 
 .el-submenu .el-menu-item{
@@ -265,7 +265,7 @@
 }
 
 .el-submenu .el-menu-item:hover{
-  background-color: rgb(209, 221, 229);
+  background-color: rgb(229, 209, 211);
 }
 
 .el-submenu.is-opened > .el-submenu__title .el-submenu__icon-arrow{
@@ -273,7 +273,7 @@
 }
 
 .el-submenu.is-active .el-submenu__title{
-  border-bottom-color: #222d32;
+  border-bottom-color: #FFC0CB;
 }
 
 .el-submenu__title{
@@ -281,7 +281,7 @@
 }
 
 .el-submenu__title:hover{
-  background-color: rgb(209, 221, 229);
+  background-color: rgb(229, 209, 211);
 }
 
 .el-submenu__icon-arrow{
@@ -302,95 +302,95 @@
   line-height: normal;
   font-size: 14px;
   padding-left: 20px;
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 :root{
   /* Transition
-    -------------------------- */
+  -------------------------- */
   /* Colors
-    -------------------------- */
+  -------------------------- */
   /* Link
-    -------------------------- */
+  -------------------------- */
   /* Border
-    -------------------------- */
+  -------------------------- */
   /* Box-shadow
-    -------------------------- */
+  -------------------------- */
   /* Fill
-    -------------------------- */
+  -------------------------- */
   /* Font
-    -------------------------- */
+  -------------------------- */
   /* Size
-    -------------------------- */
+  -------------------------- */
   /* z-index
-    -------------------------- */
+  -------------------------- */
   /* Disable base
-    -------------------------- */
+  -------------------------- */
   /* Icon
-    -------------------------- */
+  -------------------------- */
   /* Checkbox
-    -------------------------- */
+  -------------------------- */
   /* Radio
-    -------------------------- */
+  -------------------------- */
   /* Select
-    -------------------------- */
+  -------------------------- */
   /* Alert
-    -------------------------- */
+  -------------------------- */
   /* Message Box
-    -------------------------- */
+  -------------------------- */
   /* Message
-    -------------------------- */
+  -------------------------- */
   /* Notification
-    -------------------------- */
+  -------------------------- */
   /* Input
-    -------------------------- */
+  -------------------------- */
   /* Cascader
-    -------------------------- */
+  -------------------------- */
   /* Group
-    -------------------------- */
+  -------------------------- */
   /* Tab
-    -------------------------- */
+  -------------------------- */
   /* Button
-    -------------------------- */
+  -------------------------- */
   /* cascader
-    -------------------------- */
+  -------------------------- */
   /* Switch
-   -------------------------- */
+ -------------------------- */
   /* Dialog
-   -------------------------- */
+ -------------------------- */
   /* Table
-   -------------------------- */
+ -------------------------- */
   /* Pagination
-   -------------------------- */
+ -------------------------- */
   /* Popover
-   -------------------------- */
+ -------------------------- */
   /* Tooltip
-    -------------------------- */
+  -------------------------- */
   /* Tag
-    -------------------------- */
+  -------------------------- */
   /* Dropdown
-    -------------------------- */
+  -------------------------- */
   /* Badge
-    -------------------------- */
+  -------------------------- */
   /* Card
-    --------------------------*/
+  --------------------------*/
   /* Slider
-    --------------------------*/
+  --------------------------*/
   /* Steps
-    --------------------------*/
+  --------------------------*/
   /* Menu
-    --------------------------*/
+  --------------------------*/
   /* Rate
-    --------------------------*/
+  --------------------------*/
   /* DatePicker
-    --------------------------*/
+  --------------------------*/
   /* Loading
-    --------------------------*/
+  --------------------------*/
   /* Scrollbar
-    --------------------------*/
+  --------------------------*/
   /* Carousel
-    --------------------------*/
+  --------------------------*/
   /* Collapse
-    --------------------------*/
+  --------------------------*/
   /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
