--- a/theme/message-box.css
+++ b/theme/message-box.css
@@ -219,9 +219,9 @@
   white-space: nowrap;
   cursor: pointer;
   background: #fff;
-  border: 1px solid rgb(191, 206, 217);
+  border: 1px solid rgb(217, 191, 193);
   border-color: #c4c4c4;
-  color: rgb(31, 48, 61);
+  color: rgb(61, 31, 33);
   -webkit-appearance: none;
   text-align: center;
   box-sizing: border-box;
@@ -238,12 +238,12 @@
   margin-left: 10px;
 }
 .el-button:hover, .el-button:focus{
-  color: #222d32;
-  border-color: #222d32;
+  color: #FFC0CB;
+  border-color: #FFC0CB;
 }
 .el-button:active{
-  color: rgb(31, 41, 45);
-  border-color: rgb(31, 41, 45);
+  color: rgb(230, 173, 183);
+  border-color: rgb(230, 173, 183);
   outline: none;
 }
 .el-button::-moz-focus-inner{
@@ -270,11 +270,11 @@
 }
 .el-button.is-disabled{}
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
   cursor: not-allowed;
   background-image: none;
-  background-color: rgb(238, 242, 246);
-  border-color: rgb(209, 221, 229);
+  background-color: rgb(246, 238, 238);
+  border-color: rgb(229, 209, 211);
 }
 .el-button.is-disabled.el-button--text{
   background-color: transparent;
@@ -282,60 +282,60 @@
 .el-button.is-disabled.is-plain{}
 .el-button.is-disabled.is-plain, .el-button.is-disabled.is-plain:hover, .el-button.is-disabled.is-plain:focus{
   background-color: #fff;
-  border-color: rgb(209, 221, 229);
-  color: rgb(191, 206, 217);
+  border-color: rgb(229, 209, 211);
+  color: rgb(217, 191, 193);
 }
 .el-button.is-active{
-  color: rgb(31, 41, 45);
-  border-color: rgb(31, 41, 45);
+  color: rgb(230, 173, 183);
+  border-color: rgb(230, 173, 183);
 }
 .el-button.is-plain{}
 .el-button.is-plain:hover, .el-button.is-plain:focus{
   background: #fff;
-  border-color: #222d32;
-  color: #222d32;
+  border-color: #FFC0CB;
+  color: #FFC0CB;
 }
 .el-button.is-plain:active{
   background: #fff;
-  border-color: rgb(31, 41, 45);
-  color: rgb(31, 41, 45);
+  border-color: rgb(230, 173, 183);
+  color: rgb(230, 173, 183);
   outline: none;
 }
 .el-button--primary{
   color: #fff;
-  background-color: #222d32;
-  border-color: #222d32;
+  background-color: #FFC0CB;
+  border-color: #FFC0CB;
 }
 .el-button--primary:hover, .el-button--primary:focus{
-  background: rgb(78, 87, 91);
-  border-color: rgb(78, 87, 91);
+  background: rgb(255, 205, 213);
+  border-color: rgb(255, 205, 213);
   color: #fff;
 }
 .el-button--primary:active{
-  background: rgb(31, 41, 45);
-  border-color: rgb(31, 41, 45);
+  background: rgb(230, 173, 183);
+  border-color: rgb(230, 173, 183);
   color: #fff;
   outline: none;
 }
 .el-button--primary.is-active{
-  background: rgb(31, 41, 45);
-  border-color: rgb(31, 41, 45);
+  background: rgb(230, 173, 183);
+  border-color: rgb(230, 173, 183);
   color: #fff;
 }
 .el-button--primary.is-plain{
   background: #fff;
-  border: 1px solid rgb(191, 206, 217);
-  color: rgb(31, 48, 61);
+  border: 1px solid rgb(217, 191, 193);
+  color: rgb(61, 31, 33);
 }
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
   background: #fff;
-  border-color: #222d32;
-  color: #222d32;
+  border-color: #FFC0CB;
+  color: #FFC0CB;
 }
 .el-button--primary.is-plain:active{
   background: #fff;
-  border-color: rgb(31, 41, 45);
-  color: rgb(31, 41, 45);
+  border-color: rgb(230, 173, 183);
+  color: rgb(230, 173, 183);
   outline: none;
 }
 .el-button--success{
@@ -361,8 +361,8 @@
 }
 .el-button--success.is-plain{
   background: #fff;
-  border: 1px solid rgb(191, 206, 217);
-  color: rgb(31, 48, 61);
+  border: 1px solid rgb(217, 191, 193);
+  color: rgb(61, 31, 33);
 }
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
   background: #fff;
@@ -398,8 +398,8 @@
 }
 .el-button--warning.is-plain{
   background: #fff;
-  border: 1px solid rgb(191, 206, 217);
-  color: rgb(31, 48, 61);
+  border: 1px solid rgb(217, 191, 193);
+  color: rgb(61, 31, 33);
 }
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
   background: #fff;
@@ -435,8 +435,8 @@
 }
 .el-button--danger.is-plain{
   background: #fff;
-  border: 1px solid rgb(191, 206, 217);
-  color: rgb(31, 48, 61);
+  border: 1px solid rgb(217, 191, 193);
+  color: rgb(61, 31, 33);
 }
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
   background: #fff;
@@ -472,8 +472,8 @@
 }
 .el-button--info.is-plain{
   background: #fff;
-  border: 1px solid rgb(191, 206, 217);
-  color: rgb(31, 48, 61);
+  border: 1px solid rgb(217, 191, 193);
+  color: rgb(61, 31, 33);
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
   background: #fff;
@@ -503,16 +503,16 @@
 }
 .el-button--text{
   border: none;
-  color: #222d32;
+  color: #FFC0CB;
   background: transparent;
   padding-left: 0;
   padding-right: 0;
 }
 .el-button--text:hover, .el-button--text:focus{
-  color: rgb(78, 87, 91);
+  color: rgb(255, 205, 213);
 }
 .el-button--text:active{
-  color: rgb(31, 41, 45);
+  color: rgb(230, 173, 183);
 }
 .el-button-group{
   display: inline-block;
@@ -698,23 +698,23 @@
   width: 100%;
 }
 .el-input.is-disabled .el-input__inner{
-  background-color: rgb(238, 242, 246);
-  border-color: rgb(209, 221, 229);
+  background-color: rgb(246, 238, 238);
+  border-color: rgb(229, 209, 211);
   color: #bbb;
   cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 .el-input.is-active .el-input__inner{
   outline: none;
-  border-color: #222d32;
+  border-color: #FFC0CB;
 }
 .el-input__inner{
   -webkit-appearance: none;
@@ -723,33 +723,33 @@
   background-color: #fff;
   background-image: none;
   border-radius: 4px;
-  border: 1px solid rgb(191, 206, 217);
+  border: 1px solid rgb(217, 191, 193);
   box-sizing: border-box;
-  color: rgb(31, 48, 61);
+  color: rgb(61, 31, 33);
   display: inline-block;
   font-size: inherit;
   height: 36px;
   line-height: 1;
   outline: none;
   padding: 3px 10px;
-  transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+  transition: border-color .2s cubic-bezier(.645,.045,.355,1);
   width: 100%;
 }
 .el-input__inner::-webkit-input-placeholder{
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 .el-input__inner:-ms-input-placeholder{
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 .el-input__inner::placeholder{
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 .el-input__inner:hover{
-  border-color: rgb(131, 148, 165);
+  border-color: rgb(165, 131, 131);
 }
 .el-input__inner:focus{
   outline: none;
-  border-color: #222d32;
+  border-color: #FFC0CB;
 }
 .el-input__icon{
   position: absolute;
@@ -758,7 +758,7 @@
   right: 0;
   top: 0;
   text-align: center;
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
   transition: all .3s;
 }
 .el-input__icon:after{
@@ -774,10 +774,10 @@
 .el-input__icon.is-clickable{}
 .el-input__icon.is-clickable:hover{
   cursor: pointer;
-  color: rgb(131, 148, 165);
+  color: rgb(165, 131, 131);
 }
 .el-input__icon.is-clickable:hover + .el-input__inner{
-  border-color: rgb(131, 148, 165);
+  border-color: rgb(165, 131, 131);
 }
 .el-input--large{
   font-size: 16px;
@@ -808,12 +808,12 @@
   display: table-cell;
 }
 .el-input-group__append, .el-input-group__prepend{
-  background-color: rgb(251, 251, 251);
-  color: rgb(151, 171, 190);
+  background-color: rgb(255, 254, 254);
+  color: rgb(190, 151, 152);
   vertical-align: middle;
   display: table-cell;
   position: relative;
-  border: 1px solid rgb(191, 206, 217);
+  border: 1px solid rgb(217, 191, 193);
   border-radius: 4px;
   padding: 0 10px;
   width: 1px;
@@ -857,19 +857,19 @@
   vertical-align: bottom;
 }
 .el-textarea.is-disabled .el-textarea__inner{
-  background-color: rgb(238, 242, 246);
-  border-color: rgb(209, 221, 229);
+  background-color: rgb(246, 238, 238);
+  border-color: rgb(229, 209, 211);
   color: #bbb;
   cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-  color: rgb(191, 206, 217);
+  color: rgb(217, 191, 193);
 }
 .el-textarea__inner{
   display: block;
@@ -879,28 +879,28 @@
   box-sizing: border-box;
   width: 100%;
   font-size: 14px;
-  color: rgb(31, 48, 61);
+  color: rgb(61, 31, 33);
   background-color: #fff;
   background-image: none;
-  border: 1px solid rgb(191, 206, 217);
+  border: 1px solid rgb(217, 191, 193);
   border-radius: 4px;
-  transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+  transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
 .el-textarea__inner::-webkit-input-placeholder{
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 .el-textarea__inner:-ms-input-placeholder{
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 .el-textarea__inner::placeholder{
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
 }
 .el-textarea__inner:hover{
-  border-color: rgb(131, 148, 165);
+  border-color: rgb(165, 131, 131);
 }
 .el-textarea__inner:focus{
   outline: none;
-  border-color: #222d32;
+  border-color: #FFC0CB;
 }
 
 .el-message-box{
@@ -954,12 +954,12 @@
 }
 
 .el-message-box__headerbtn:focus .el-message-box__close, .el-message-box__headerbtn:hover .el-message-box__close{
-  color: #222d32;
+  color: #FFC0CB;
 }
 
 .el-message-box__content{
   padding: 30px 20px;
-  color: rgb(72, 90, 106);
+  color: rgb(106, 72, 73);
   font-size: 14px;
   position: relative;
 }
@@ -1069,91 +1069,91 @@
 }
 :root{
   /* Transition
-    -------------------------- */
+  -------------------------- */
   /* Colors
-    -------------------------- */
+  -------------------------- */
   /* Link
-    -------------------------- */
+  -------------------------- */
   /* Border
-    -------------------------- */
+  -------------------------- */
   /* Box-shadow
-    -------------------------- */
+  -------------------------- */
   /* Fill
-    -------------------------- */
+  -------------------------- */
   /* Font
-    -------------------------- */
+  -------------------------- */
   /* Size
-    -------------------------- */
+  -------------------------- */
   /* z-index
-    -------------------------- */
+  -------------------------- */
   /* Disable base
-    -------------------------- */
+  -------------------------- */
   /* Icon
-    -------------------------- */
+  -------------------------- */
   /* Checkbox
-    -------------------------- */
+  -------------------------- */
   /* Radio
-    -------------------------- */
+  -------------------------- */
   /* Select
-    -------------------------- */
+  -------------------------- */
   /* Alert
-    -------------------------- */
+  -------------------------- */
   /* Message Box
-    -------------------------- */
+  -------------------------- */
   /* Message
-    -------------------------- */
+  -------------------------- */
   /* Notification
-    -------------------------- */
+  -------------------------- */
   /* Input
-    -------------------------- */
+  -------------------------- */
   /* Cascader
-    -------------------------- */
+  -------------------------- */
   /* Group
-    -------------------------- */
+  -------------------------- */
   /* Tab
-    -------------------------- */
+  -------------------------- */
   /* Button
-    -------------------------- */
+  -------------------------- */
   /* cascader
-    -------------------------- */
+  -------------------------- */
   /* Switch
-   -------------------------- */
+ -------------------------- */
   /* Dialog
-   -------------------------- */
+ -------------------------- */
   /* Table
-   -------------------------- */
+ -------------------------- */
   /* Pagination
-   -------------------------- */
+ -------------------------- */
   /* Popover
-   -------------------------- */
+ -------------------------- */
   /* Tooltip
-    -------------------------- */
+  -------------------------- */
   /* Tag
-    -------------------------- */
+  -------------------------- */
   /* Dropdown
-    -------------------------- */
+  -------------------------- */
   /* Badge
-    -------------------------- */
+  -------------------------- */
   /* Card
-    --------------------------*/
+  --------------------------*/
   /* Slider
-    --------------------------*/
+  --------------------------*/
   /* Steps
-    --------------------------*/
+  --------------------------*/
   /* Menu
-    --------------------------*/
+  --------------------------*/
   /* Rate
-    --------------------------*/
+  --------------------------*/
   /* DatePicker
-    --------------------------*/
+  --------------------------*/
   /* Loading
-    --------------------------*/
+  --------------------------*/
   /* Scrollbar
-    --------------------------*/
+  --------------------------*/
   /* Carousel
-    --------------------------*/
+  --------------------------*/
   /* Collapse
-    --------------------------*/
+  --------------------------*/
   /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
