--- a/theme/select.css
+++ b/theme/select.css
@@ -183,7 +183,7 @@
 .el-select-dropdown{
     position: absolute;
     z-index: 1001;
-    border: solid 1px rgb(209, 221, 229);
+    border: solid 1px rgb(229, 209, 211);
     border-radius: 2px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
@@ -195,11 +195,11 @@
 }
 .el-select-dropdown.is-multiple{}
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected{
-    color: #222d32;
+    color: #FFC0CB;
     background-color: #fff;
 }
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected.hover{
-    background-color: rgb(228, 233, 241);
+    background-color: rgb(241, 229, 228);
 }
 .el-select-dropdown.is-multiple .el-select-dropdown__item.selected::after{
     position: absolute;
@@ -324,23 +324,23 @@
     width: 100%;
 }
 .el-input.is-disabled .el-input__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-active .el-input__inner{
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input__inner{
     -webkit-appearance: none;
@@ -349,33 +349,33 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     box-sizing: border-box;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     display: inline-block;
     font-size: inherit;
     height: 36px;
     line-height: 1;
     outline: none;
     padding: 3px 10px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
     width: 100%;
 }
 .el-input__inner::-webkit-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner:-ms-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner::placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner:hover{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-input__inner:focus{
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input__icon{
     position: absolute;
@@ -384,7 +384,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     transition: all .3s;
 }
 .el-input__icon:after{
@@ -400,10 +400,10 @@
 .el-input__icon.is-clickable{}
 .el-input__icon.is-clickable:hover{
     cursor: pointer;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 .el-input__icon.is-clickable:hover + .el-input__inner{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-input--large{
     font-size: 16px;
@@ -434,12 +434,12 @@
     display: table-cell;
 }
 .el-input-group__append, .el-input-group__prepend{
-    background-color: rgb(251, 251, 251);
-    color: rgb(151, 171, 190);
+    background-color: rgb(255, 254, 254);
+    color: rgb(190, 151, 152);
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
     padding: 0 10px;
     width: 1px;
@@ -483,19 +483,19 @@
     vertical-align: bottom;
 }
 .el-textarea.is-disabled .el-textarea__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea__inner{
     display: block;
@@ -505,28 +505,28 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     background-color: #fff;
     background-image: none;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
 .el-textarea__inner::-webkit-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner:-ms-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner::placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner:hover{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-textarea__inner:focus{
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 @charset "UTF-8";
 :root{
@@ -620,7 +620,7 @@
   --------------------------*/
 }
 .el-tag{
-    background-color: rgb(131, 148, 165);
+    background-color: rgb(165, 131, 131);
     display: inline-block;
     padding: 0 5px;
     height: 24px;
@@ -648,67 +648,67 @@
 }
 .el-tag .el-icon-close:hover{
     background-color: #fff;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 .el-tag--gray{
-    background-color: rgb(228, 233, 241);
-    border-color: rgb(228, 233, 241);
-    color: rgb(72, 90, 106);
+    background-color: rgb(241, 229, 228);
+    border-color: rgb(241, 229, 228);
+    color: rgb(106, 72, 73);
 }
 .el-tag--gray .el-tag__close:hover{
-    background-color: rgb(72, 90, 106);
+    background-color: rgb(106, 72, 73);
     color: #fff;
 }
 .el-tag--gray.is-hit{
-    border-color: rgb(72, 90, 106);
+    border-color: rgb(106, 72, 73);
 }
 .el-tag--primary{
-    background-color: rgba(0, 86, 128, 0.8);
-    border-color: rgba(0, 86, 128, 0.9);
-    color: white;
+    background-color: rgba(255, 192, 203, 0.1);
+    border-color: rgba(255, 192, 203, 0.2);
+    color: #FFC0CB;
 }
 .el-tag--primary .el-tag__close:hover{
-    background-color: white;
+    background-color: #FFC0CB;
     color: #fff;
 }
 .el-tag--primary.is-hit{
-    border-color: white;
+    border-color: #FFC0CB;
 }
 .el-tag--success{
-    background-color: rgba(18, 206, 102, 0.8);
-    border-color: rgba(18, 206, 102, 0.9);
-    color: white;
+    background-color: rgba(18,206,102,0.10);
+    border-color: rgba(18,206,102,0.20);
+    color: #13ce66;
 }
 .el-tag--success .el-tag__close:hover{
-    background-color: white;
+    background-color: #13ce66;
     color: #fff;
 }
 .el-tag--success.is-hit{
-    border-color: white;
+    border-color: #13ce66;
 }
 .el-tag--warning{
-    background-color: rgba(247, 186, 41, 0.8);
-    border-color: rgba(247, 186, 41, 0.9);
-    color: white;
+    background-color: rgba(247,186,41,0.10);
+    border-color: rgba(247,186,41,0.20);
+    color: #f7ba2a;
 }
 .el-tag--warning .el-tag__close:hover{
-    background-color: white;
+    background-color: #f7ba2a;
     color: #fff;
 }
 .el-tag--warning.is-hit{
-    border-color: white;
+    border-color: #f7ba2a;
 }
 .el-tag--danger{
-    background-color: rgba(255, 73, 73, 0.8);
-    border-color: rgba(255, 73, 73, 0.9);
-    color: white;
+    background-color: rgba(255,73,73,0.10);
+    border-color: rgba(255,73,73,0.20);
+    color: #ff4949;
 }
 .el-tag--danger .el-tag__close:hover{
-    background-color: white;
+    background-color: #ff4949;
     color: #fff;
 }
 .el-tag--danger.is-hit{
-    border-color: white;
+    border-color: #ff4949;
 }
 @charset "UTF-8";
 :root{
@@ -809,27 +809,27 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     height: 36px;
     line-height: 1.5;
     box-sizing: border-box;
     cursor: pointer;
 }
 .el-select-dropdown__item.hover, .el-select-dropdown__item:hover{
-    background-color: rgb(228, 233, 241);
+    background-color: rgb(241, 229, 228);
 }
 .el-select-dropdown__item.selected{
     color: #fff;
-    background-color: #222d32;
+    background-color: #FFC0CB;
 }
 .el-select-dropdown__item.selected.hover{
-    background-color: rgb(30, 40, 44);
+    background-color: rgb(224, 169, 179);
 }
 .el-select-dropdown__item span{
     line-height: 1.5 !important;
 }
 .el-select-dropdown__item.is-disabled{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     cursor: not-allowed;
 }
 .el-select-dropdown__item.is-disabled:hover{
@@ -1059,11 +1059,11 @@
     height: 0;
     cursor: pointer;
     border-radius: inherit;
-    background-color: rgba(151, 171, 190, 0.3);
+    background-color: rgba(190, 151, 152, 0.3);
     transition: .3s background-color;
 }
 .el-scrollbar__thumb:hover{
-    background-color: rgba(151, 171, 190, 0.5);
+    background-color: rgba(190, 151, 152, 0.5);
 }
 .el-scrollbar__bar{
     position: absolute;
@@ -1095,7 +1095,7 @@
 }
 
 .el-select:hover .el-input__inner{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 
 .el-select .el-input__inner{
@@ -1104,13 +1104,13 @@
 }
 
 .el-select .el-input__inner:focus{
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 
 .el-select .el-input{}
 
 .el-select .el-input .el-input__icon{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     font-size: 12px;
     transition: transform .3s;
     transform: translateY(-50%) rotateZ(180deg);
@@ -1128,11 +1128,11 @@
     text-align: center;
     transform: translateY(-50%) rotateZ(180deg);
     border-radius: 100%;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 
 .el-select .el-input .el-input__icon.is-show-close:hover{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 
 .el-select .el-input .el-input__icon.is-reverse{
@@ -1146,7 +1146,7 @@
 }
 
 .el-select .el-input.is-disabled .el-input__inner:hover{
-    border-color: rgb(209, 221, 229);
+    border-color: rgb(229, 209, 211);
 }
 
 .el-select > .el-input{
@@ -1189,13 +1189,13 @@
     top: 8px;
     z-index: 1000;
     right: 25px;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     line-height: 18px;
     font-size: 12px;
 }
 
 .el-select__close:hover{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 
 .el-select__tags{
@@ -1214,7 +1214,7 @@
     font-size: 14px;
     border-radius: 4px;
     color: #fff;
-    background-color: #222d32;
+    background-color: #FFC0CB;
 }
 
 .el-select__tag .el-icon-close{
@@ -1222,91 +1222,91 @@
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
