--- a/theme/slider.css
+++ b/theme/slider.css
@@ -110,23 +110,23 @@
     width: 100%;
 }
 .el-input.is-disabled .el-input__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-active .el-input__inner{
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input__inner{
     -webkit-appearance: none;
@@ -135,33 +135,33 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     box-sizing: border-box;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     display: inline-block;
     font-size: inherit;
     height: 36px;
     line-height: 1;
     outline: none;
     padding: 3px 10px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
     width: 100%;
 }
 .el-input__inner::-webkit-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner:-ms-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner::placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner:hover{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-input__inner:focus{
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input__icon{
     position: absolute;
@@ -170,7 +170,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     transition: all .3s;
 }
 .el-input__icon:after{
@@ -186,10 +186,10 @@
 .el-input__icon.is-clickable{}
 .el-input__icon.is-clickable:hover{
     cursor: pointer;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 .el-input__icon.is-clickable:hover + .el-input__inner{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-input--large{
     font-size: 16px;
@@ -220,12 +220,12 @@
     display: table-cell;
 }
 .el-input-group__append, .el-input-group__prepend{
-    background-color: rgb(251, 251, 251);
-    color: rgb(151, 171, 190);
+    background-color: rgb(255, 254, 254);
+    color: rgb(190, 151, 152);
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
     padding: 0 10px;
     width: 1px;
@@ -269,19 +269,19 @@
     vertical-align: bottom;
 }
 .el-textarea.is-disabled .el-textarea__inner{
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea__inner{
     display: block;
@@ -291,28 +291,28 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     background-color: #fff;
     background-image: none;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
 .el-textarea__inner::-webkit-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner:-ms-input-placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner::placeholder{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner:hover{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-textarea__inner:focus{
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 :root{
     /* Transition
@@ -423,33 +423,33 @@
     padding-right: 10px;
 }
 .el-input-number.is-disabled .el-input-number__increase, .el-input-number.is-disabled .el-input-number__decrease{
-    border-color: rgb(209, 221, 229);
-    color: rgb(209, 221, 229);
+    border-color: rgb(229, 209, 211);
+    color: rgb(229, 209, 211);
 }
 .el-input-number.is-disabled .el-input-number__increase:hover, .el-input-number.is-disabled .el-input-number__decrease:hover{
-    color: rgb(209, 221, 229);
+    color: rgb(229, 209, 211);
     cursor: not-allowed;
 }
 .el-input-number__increase, .el-input-number__decrease{
     height: auto;
-    border-left: 1px solid rgb(191, 206, 217);
+    border-left: 1px solid rgb(217, 191, 193);
     width: 36px;
     line-height: 34px;
     top: 1px;
     text-align: center;
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
     cursor: pointer;
     position: absolute;
     z-index: 1;
 }
 .el-input-number__increase:hover, .el-input-number__decrease:hover{
-    color: #222d32;
+    color: #FFC0CB;
 }
 .el-input-number__increase:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled), .el-input-number__decrease:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled){
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input-number__increase.is-disabled, .el-input-number__decrease.is-disabled{
-    color: rgb(209, 221, 229);
+    color: rgb(229, 209, 211);
     cursor: not-allowed;
 }
 .el-input-number__increase{
@@ -606,13 +606,13 @@
 }
 .el-tooltip__popper[x-placement^="top"] .popper__arrow{
     bottom: -6px;
-    border-top-color: rgb(31, 48, 61);
+    border-top-color: rgb(61, 31, 33);
     border-bottom-width: 0;
 }
 .el-tooltip__popper[x-placement^="top"] .popper__arrow::after{
     bottom: 1px;
     margin-left: -5px;
-    border-top-color: rgb(31, 48, 61);
+    border-top-color: rgb(61, 31, 33);
     border-bottom-width: 0;
 }
 .el-tooltip__popper[x-placement^="bottom"]{
@@ -621,26 +621,26 @@
 .el-tooltip__popper[x-placement^="bottom"] .popper__arrow{
     top: -6px;
     border-top-width: 0;
-    border-bottom-color: rgb(31, 48, 61);
+    border-bottom-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper[x-placement^="bottom"] .popper__arrow::after{
     top: 1px;
     margin-left: -5px;
     border-top-width: 0;
-    border-bottom-color: rgb(31, 48, 61);
+    border-bottom-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper[x-placement^="right"]{
     margin-left: 12px;
 }
 .el-tooltip__popper[x-placement^="right"] .popper__arrow{
     left: -6px;
-    border-right-color: rgb(31, 48, 61);
+    border-right-color: rgb(61, 31, 33);
     border-left-width: 0;
 }
 .el-tooltip__popper[x-placement^="right"] .popper__arrow::after{
     bottom: -5px;
     left: 1px;
-    border-right-color: rgb(31, 48, 61);
+    border-right-color: rgb(61, 31, 33);
     border-left-width: 0;
 }
 .el-tooltip__popper[x-placement^="left"]{
@@ -649,45 +649,45 @@
 .el-tooltip__popper[x-placement^="left"] .popper__arrow{
     right: -6px;
     border-right-width: 0;
-    border-left-color: rgb(31, 48, 61);
+    border-left-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper[x-placement^="left"] .popper__arrow::after{
     right: 1px;
     bottom: -5px;
     margin-left: -5px;
     border-right-width: 0;
-    border-left-color: rgb(31, 48, 61);
+    border-left-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper.is-light{
     background: #fff;
-    border: 1px solid rgb(31, 48, 61);
+    border: 1px solid rgb(61, 31, 33);
 }
 .el-tooltip__popper.is-light[x-placement^="top"] .popper__arrow{
-    border-top-color: rgb(31, 48, 61);
+    border-top-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper.is-light[x-placement^="top"] .popper__arrow::after{
     border-top-color: #fff;
 }
 .el-tooltip__popper.is-light[x-placement^="bottom"] .popper__arrow{
-    border-bottom-color: rgb(31, 48, 61);
+    border-bottom-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper.is-light[x-placement^="bottom"] .popper__arrow::after{
     border-bottom-color: #fff;
 }
 .el-tooltip__popper.is-light[x-placement^="left"] .popper__arrow{
-    border-left-color: rgb(31, 48, 61);
+    border-left-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper.is-light[x-placement^="left"] .popper__arrow::after{
     border-left-color: #fff;
 }
 .el-tooltip__popper.is-light[x-placement^="right"] .popper__arrow{
-    border-right-color: rgb(31, 48, 61);
+    border-right-color: rgb(61, 31, 33);
 }
 .el-tooltip__popper.is-light[x-placement^="right"] .popper__arrow::after{
     border-right-color: #fff;
 }
 .el-tooltip__popper.is-dark{
-    background: rgb(31, 48, 61);
+    background: rgb(61, 31, 33);
     color: #fff;
 }
 :root{
@@ -831,10 +831,10 @@
 .el-slider.is-vertical.el-slider--with-input .el-slider__input .el-input-number__decrease, .el-slider.is-vertical.el-slider--with-input .el-slider__input .el-input-number__increase{
     top: 30px;
     margin-top: -1px;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     line-height: 20px;
     box-sizing: border-box;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
 
 .el-slider.is-vertical.el-slider--with-input .el-slider__input .el-input-number__decrease{
@@ -854,18 +854,18 @@
 }
 
 .el-slider.is-vertical.el-slider--with-input .el-slider__input:hover .el-input-number__decrease, .el-slider.is-vertical.el-slider--with-input .el-slider__input:hover .el-input-number__increase{
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 
 .el-slider.is-vertical.el-slider--with-input .el-slider__input:active .el-input-number__decrease, .el-slider.is-vertical.el-slider--with-input .el-slider__input:active .el-input-number__increase{
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 
 .el-slider__runway{
     width: 100%;
     height: 4px;
     margin: 16px 0;
-    background-color: rgb(228, 233, 241);
+    background-color: rgb(241, 229, 228);
     border-radius: 3px;
     position: relative;
     cursor: pointer;
@@ -882,7 +882,7 @@
 }
 
 .el-slider__runway.disabled .el-slider__bar, .el-slider__runway.disabled .el-slider__button{
-    background-color: rgb(191, 206, 217);
+    background-color: rgb(217, 191, 193);
 }
 
 .el-slider__runway.disabled .el-slider__button-wrapper{}
@@ -916,7 +916,7 @@
 
 .el-slider__bar{
     height: 4px;
-    background-color: #222d32;
+    background-color: #FFC0CB;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
     position: absolute;
@@ -955,7 +955,7 @@
 .el-slider__button{
     width: 12px;
     height: 12px;
-    background-color: #222d32;
+    background-color: #FFC0CB;
     border-radius: 50%;
     transition: .2s;
     -webkit-user-select: none;
@@ -966,7 +966,7 @@
 
 .el-slider__button:hover, .el-slider__button.hover, .el-slider__button.dragging{
     transform: scale(1.5);
-    background-color: rgb(30, 40, 44);
+    background-color: rgb(224, 169, 179);
 }
 
 .el-slider__button:hover, .el-slider__button.hover{
@@ -984,96 +984,96 @@
     width: 4px;
     height: 4px;
     border-radius: 100%;
-    background-color: rgb(191, 206, 217);
+    background-color: rgb(217, 191, 193);
     transform: translateX(-50%);
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
