--- a/theme/tabs.css
+++ b/theme/tabs.css
@@ -93,7 +93,7 @@
 .el-tabs{}
 
 .el-tabs__header{
-  border-bottom: 1px solid rgb(209, 221, 229);
+  border-bottom: 1px solid rgb(229, 209, 211);
   padding: 0;
   position: relative;
   margin: 0 0 15px;
@@ -104,7 +104,7 @@
   bottom: 0;
   left: 0;
   height: 3px;
-  background-color: #222d32;
+  background-color: #FFC0CB;
   z-index: 1;
   transition: transform .3s cubic-bezier(.645,.045,.355,1);
   list-style: none;
@@ -130,7 +130,7 @@
 }
 
 .el-tabs__new-tab:hover{
-  color: #222d32;
+  color: #FFC0CB;
 }
 
 .el-tabs__nav-wrap{
@@ -152,7 +152,7 @@
   cursor: pointer;
   line-height: 44px;
   font-size: 12px;
-  color: rgb(131, 148, 165);
+  color: rgb(165, 131, 131);
 }
 
 .el-tabs__nav-next{
@@ -178,7 +178,7 @@
   display: inline-block;
   list-style: none;
   font-size: 14px;
-  color: rgb(131, 148, 165);
+  color: rgb(165, 131, 131);
   position: relative;
 }
 
@@ -195,12 +195,12 @@
 }
 
 .el-tabs__item .el-icon-close:hover{
-  background-color: rgb(151, 171, 190);
+  background-color: rgb(190, 151, 152);
   color: #fff;
 }
 
 .el-tabs__item:hover{
-  color: rgb(31, 48, 61);
+  color: rgb(61, 31, 33);
   cursor: pointer;
 }
 
@@ -210,7 +210,7 @@
 }
 
 .el-tabs__item.is-active{
-  color: #222d32;
+  color: #FFC0CB;
 }
 
 .el-tabs__content{
@@ -252,7 +252,7 @@
 }
 
 .el-tabs--card > .el-tabs__header .el-tabs__item.is-active{
-  border: 1px solid rgb(209, 221, 229);
+  border: 1px solid rgb(229, 209, 211);
   border-bottom-color: #fff;
   border-radius: 4px 4px 0 0;
 }
@@ -268,7 +268,7 @@
 
 .el-tabs--border-card{
   background: #fff;
-  border: 1px solid rgb(209, 221, 229);
+  border: 1px solid rgb(229, 209, 211);
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.12), 0px 0px 6px 0px rgba(0,0,0,0.04);
 }
 
@@ -277,7 +277,7 @@
 }
 
 .el-tabs--border-card >.el-tabs__header {
-  background-color: rgb(238, 242, 246);
+  background-color: rgb(246, 238, 238);
   margin: 0;
 }
 
@@ -291,16 +291,16 @@
 
 .el-tabs--border-card >.el-tabs__header .el-tabs__item.is-active{
   background-color: #fff;
-  border-right-color: rgb(209, 221, 229);
-  border-left-color: rgb(209, 221, 229);
+  border-right-color: rgb(229, 209, 211);
+  border-left-color: rgb(229, 209, 211);
 }
 
 .el-tabs--border-card >.el-tabs__header .el-tabs__item.is-active:first-child{
-  border-left-color: rgb(209, 221, 229);
+  border-left-color: rgb(229, 209, 211);
 }
 
 .el-tabs--border-card >.el-tabs__header .el-tabs__item.is-active:last-child{
-  border-right-color: rgb(209, 221, 229);
+  border-right-color: rgb(229, 209, 211);
 }
 
 .slideInRight-transition, .slideInLeft-transition {
@@ -379,91 +379,91 @@
 }
 :root{
   /* Transition
-    -------------------------- */
+  -------------------------- */
   /* Colors
-    -------------------------- */
+  -------------------------- */
   /* Link
-    -------------------------- */
+  -------------------------- */
   /* Border
-    -------------------------- */
+  -------------------------- */
   /* Box-shadow
-    -------------------------- */
+  -------------------------- */
   /* Fill
-    -------------------------- */
+  -------------------------- */
   /* Font
-    -------------------------- */
+  -------------------------- */
   /* Size
-    -------------------------- */
+  -------------------------- */
   /* z-index
-    -------------------------- */
+  -------------------------- */
   /* Disable base
-    -------------------------- */
+  -------------------------- */
   /* Icon
-    -------------------------- */
+  -------------------------- */
   /* Checkbox
-    -------------------------- */
+  -------------------------- */
   /* Radio
-    -------------------------- */
+  -------------------------- */
   /* Select
-    -------------------------- */
+  -------------------------- */
   /* Alert
-    -------------------------- */
+  -------------------------- */
   /* Message Box
-    -------------------------- */
+  -------------------------- */
   /* Message
-    -------------------------- */
+  -------------------------- */
   /* Notification
-    -------------------------- */
+  -------------------------- */
   /* Input
-    -------------------------- */
+  -------------------------- */
   /* Cascader
-    -------------------------- */
+  -------------------------- */
   /* Group
-    -------------------------- */
+  -------------------------- */
   /* Tab
-    -------------------------- */
+  -------------------------- */
   /* Button
-    -------------------------- */
+  -------------------------- */
   /* cascader
-    -------------------------- */
+  -------------------------- */
   /* Switch
-   -------------------------- */
+ -------------------------- */
   /* Dialog
-   -------------------------- */
+ -------------------------- */
   /* Table
-   -------------------------- */
+ -------------------------- */
   /* Pagination
-   -------------------------- */
+ -------------------------- */
   /* Popover
-   -------------------------- */
+ -------------------------- */
   /* Tooltip
-    -------------------------- */
+  -------------------------- */
   /* Tag
-    -------------------------- */
+  -------------------------- */
   /* Dropdown
-    -------------------------- */
+  -------------------------- */
   /* Badge
-    -------------------------- */
+  -------------------------- */
   /* Card
-    --------------------------*/
+  --------------------------*/
   /* Slider
-    --------------------------*/
+  --------------------------*/
   /* Steps
-    --------------------------*/
+  --------------------------*/
   /* Menu
-    --------------------------*/
+  --------------------------*/
   /* Rate
-    --------------------------*/
+  --------------------------*/
   /* DatePicker
-    --------------------------*/
+  --------------------------*/
   /* Loading
-    --------------------------*/
+  --------------------------*/
   /* Scrollbar
-    --------------------------*/
+  --------------------------*/
   /* Carousel
-    --------------------------*/
+  --------------------------*/
   /* Collapse
-    --------------------------*/
+  --------------------------*/
   /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
