--- a/theme/time-picker.css
+++ b/theme/time-picker.css
@@ -385,14 +385,14 @@
     font-size: 12px;
 }
 .el-time-spinner__item:hover:not(.disabled):not(.active) {
-    background: rgb(228, 233, 241);
+    background: rgb(241, 229, 228);
     cursor: pointer;
 }
 .el-time-spinner__item.active:not(.disabled) {
     color: #fff;
 }
 .el-time-spinner__item.disabled {
-    color: rgb(209, 221, 229);
+    color: rgb(229, 209, 211);
     cursor: not-allowed;
 }
 :root {
@@ -487,7 +487,7 @@
 }
 .el-time-panel {
     margin: 5px 0;
-    border: solid 1px rgb(209, 221, 229);
+    border: solid 1px rgb(229, 209, 211);
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     border-radius: 2px;
@@ -513,7 +513,7 @@
     font-size: 14px;
     margin-top: -15px;
     line-height: 16px;
-    background-color: #222d32;
+    background-color: #FFC0CB;
     height: 32px;
     z-index: -1;
     left: 0;
@@ -554,11 +554,11 @@
     background-color: transparent;
     outline: none;
     font-size: 12px;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 .el-time-panel__btn.confirm {
     font-weight: 800;
-    color: #222d32;
+    color: #FFC0CB;
 }
 @charset "UTF-8";
 :root {
@@ -658,23 +658,23 @@
     width: 100%;
 }
 .el-input.is-disabled .el-input__inner {
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-disabled .el-input__inner::placeholder {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-input.is-active .el-input__inner {
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input__inner {
     -webkit-appearance: none;
@@ -683,33 +683,33 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     box-sizing: border-box;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     display: inline-block;
     font-size: inherit;
     height: 36px;
     line-height: 1;
     outline: none;
     padding: 3px 10px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
     width: 100%;
 }
 .el-input__inner::-webkit-input-placeholder {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner:-ms-input-placeholder {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner::placeholder {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-input__inner:hover {
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-input__inner:focus {
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 .el-input__icon {
     position: absolute;
@@ -718,7 +718,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
     transition: all .3s;
 }
 .el-input__icon:after {
@@ -734,10 +734,10 @@
 .el-input__icon.is-clickable {}
 .el-input__icon.is-clickable:hover {
     cursor: pointer;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
 }
 .el-input__icon.is-clickable:hover + .el-input__inner {
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-input--large {
     font-size: 16px;
@@ -768,12 +768,12 @@
     display: table-cell;
 }
 .el-input-group__append, .el-input-group__prepend {
-    background-color: rgb(251, 251, 251);
-    color: rgb(151, 171, 190);
+    background-color: rgb(255, 254, 254);
+    color: rgb(190, 151, 152);
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
     padding: 0 10px;
     width: 1px;
@@ -817,19 +817,19 @@
     vertical-align: bottom;
 }
 .el-textarea.is-disabled .el-textarea__inner {
-    background-color: rgb(238, 242, 246);
-    border-color: rgb(209, 221, 229);
+    background-color: rgb(246, 238, 238);
+    border-color: rgb(229, 209, 211);
     color: #bbb;
     cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder {
-    color: rgb(191, 206, 217);
+    color: rgb(217, 191, 193);
 }
 .el-textarea__inner {
     display: block;
@@ -839,28 +839,28 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: rgb(31, 48, 61);
+    color: rgb(61, 31, 33);
     background-color: #fff;
     background-image: none;
-    border: 1px solid rgb(191, 206, 217);
+    border: 1px solid rgb(217, 191, 193);
     border-radius: 4px;
-    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
 .el-textarea__inner::-webkit-input-placeholder {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner:-ms-input-placeholder {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner::placeholder {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
 }
 .el-textarea__inner:hover {
-    border-color: rgb(131, 148, 165);
+    border-color: rgb(165, 131, 131);
 }
 .el-textarea__inner:focus {
     outline: none;
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 @charset "UTF-8";
 :root {
@@ -976,11 +976,11 @@
     height: 0;
     cursor: pointer;
     border-radius: inherit;
-    background-color: rgba(151, 171, 190, 0.3);
+    background-color: rgba(190, 151, 152, 0.3);
     transition: .3s background-color;
 }
 .el-scrollbar__thumb:hover {
-    background-color: rgba(151, 171, 190, 0.5);
+    background-color: rgba(190, 151, 152, 0.5);
 }
 .el-scrollbar__bar {
     position: absolute;
@@ -1007,91 +1007,91 @@
 }
 :root {
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
