--- a/theme/time-select.css
+++ b/theme/time-select.css
@@ -440,8 +440,8 @@
   --------------------------*/
 }
 .el-picker-panel {
-  color: rgb(72, 90, 106);
-  border: 1px solid rgb(209, 221, 229);
+  color: rgb(106, 72, 73);
+  border: 1px solid rgb(229, 209, 211);
   box-shadow: 0 2px 6px #ccc;
   background: #fff;
   border-radius: 2px;
@@ -472,18 +472,18 @@
   background-color: transparent;
   line-height: 28px;
   font-size: 14px;
-  color: rgb(72, 90, 106);
+  color: rgb(106, 72, 73);
   padding-left: 12px;
   text-align: left;
   outline: none;
   cursor: pointer;
 }
 .el-picker-panel__shortcut:hover {
-  background-color: rgb(228, 233, 241);
+  background-color: rgb(241, 229, 228);
 }
 .el-picker-panel__shortcut.active {
   background-color: #e6f1fe;
-  color: #222d32;
+  color: #FFC0CB;
 }
 .el-picker-panel__btn {
   border: 1px solid #dcdcdc;
@@ -502,7 +502,7 @@
 }
 .el-picker-panel__icon-btn {
   font-size: 12px;
-  color: rgb(151, 171, 190);
+  color: rgb(190, 151, 152);
   border: 0;
   background: transparent;
   cursor: pointer;
@@ -510,11 +510,11 @@
   margin-top: 3px;
 }
 .el-picker-panel__icon-btn:hover {
-  color: #222d32;
+  color: #FFC0CB;
 }
 .el-picker-panel__link-btn {
   cursor: pointer;
-  color: #222d32;
+  color: #FFC0CB;
   text-decoration: none;
   padding: 15px;
   font-size: 12px;
@@ -527,7 +527,7 @@
   border-right: 1px solid #e4e4e4;
   box-sizing: border-box;
   padding-top: 6px;
-  background-color: rgb(251, 251, 251);
+  background-color: rgb(255, 254, 254);
   overflow: auto;
 }
 .el-picker-panel *[slot=sidebar] + .el-picker-panel__body, .el-picker-panel__sidebar + .el-picker-panel__body {
@@ -578,10 +578,10 @@
   cursor: pointer;
 }
 .el-date-picker__header-label:hover {
-  color: #222d32;
+  color: #FFC0CB;
 }
 .el-date-picker__header-label.active {
-  color: #222d32;
+  color: #FFC0CB;
 }
 .el-date-picker__prev-btn {
   float: left;
@@ -803,11 +803,11 @@
   height: 0;
   cursor: pointer;
   border-radius: inherit;
-  background-color: rgba(151, 171, 190, 0.3);
+  background-color: rgba(190, 151, 152, 0.3);
   transition: .3s background-color;
 }
 .el-scrollbar__thumb:hover {
-  background-color: rgba(151, 171, 190, 0.5);
+  background-color: rgba(190, 151, 152, 0.5);
 }
 .el-scrollbar__bar {
   position: absolute;
@@ -849,110 +849,110 @@
 }
 
 .time-select-item.selected:not(.disabled) {
-  background-color: #222d32;
+  background-color: #FFC0CB;
   color: #fff
 }
 
 .time-select-item.selected:not(.disabled):hover {
-  background-color: #222d32;
+  background-color: #FFC0CB;
 }
 
 .time-select-item.disabled {
-  color: rgb(209, 221, 229);
+  color: rgb(229, 209, 211);
   cursor: not-allowed;
 }
 
 .time-select-item:hover {
-  background-color: rgb(228, 233, 241);
+  background-color: rgb(241, 229, 228);
   cursor: pointer;
 }
 :root {
   /* Transition
-    -------------------------- */
+  -------------------------- */
   /* Colors
-    -------------------------- */
+  -------------------------- */
   /* Link
-    -------------------------- */
+  -------------------------- */
   /* Border
-    -------------------------- */
+  -------------------------- */
   /* Box-shadow
-    -------------------------- */
+  -------------------------- */
   /* Fill
-    -------------------------- */
+  -------------------------- */
   /* Font
-    -------------------------- */
+  -------------------------- */
   /* Size
-    -------------------------- */
+  -------------------------- */
   /* z-index
-    -------------------------- */
+  -------------------------- */
   /* Disable base
-    -------------------------- */
+  -------------------------- */
   /* Icon
-    -------------------------- */
+  -------------------------- */
   /* Checkbox
-    -------------------------- */
+  -------------------------- */
   /* Radio
-    -------------------------- */
+  -------------------------- */
   /* Select
-    -------------------------- */
+  -------------------------- */
   /* Alert
-    -------------------------- */
+  -------------------------- */
   /* Message Box
-    -------------------------- */
+  -------------------------- */
   /* Message
-    -------------------------- */
+  -------------------------- */
   /* Notification
-    -------------------------- */
+  -------------------------- */
   /* Input
-    -------------------------- */
+  -------------------------- */
   /* Cascader
-    -------------------------- */
+  -------------------------- */
   /* Group
-    -------------------------- */
+  -------------------------- */
   /* Tab
-    -------------------------- */
+  -------------------------- */
   /* Button
-    -------------------------- */
+  -------------------------- */
   /* cascader
-    -------------------------- */
+  -------------------------- */
   /* Switch
-   -------------------------- */
+ -------------------------- */
   /* Dialog
-   -------------------------- */
+ -------------------------- */
   /* Table
-   -------------------------- */
+ -------------------------- */
   /* Pagination
-   -------------------------- */
+ -------------------------- */
   /* Popover
-   -------------------------- */
+ -------------------------- */
   /* Tooltip
-    -------------------------- */
+  -------------------------- */
   /* Tag
-    -------------------------- */
+  -------------------------- */
   /* Dropdown
-    -------------------------- */
+  -------------------------- */
   /* Badge
-    -------------------------- */
+  -------------------------- */
   /* Card
-    --------------------------*/
+  --------------------------*/
   /* Slider
-    --------------------------*/
+  --------------------------*/
   /* Steps
-    --------------------------*/
+  --------------------------*/
   /* Menu
-    --------------------------*/
+  --------------------------*/
   /* Rate
-    --------------------------*/
+  --------------------------*/
   /* DatePicker
-    --------------------------*/
+  --------------------------*/
   /* Loading
-    --------------------------*/
+  --------------------------*/
   /* Scrollbar
-    --------------------------*/
+  --------------------------*/
   /* Carousel
-    --------------------------*/
+  --------------------------*/
   /* Collapse
-    --------------------------*/
+  --------------------------*/
   /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
