--- a/theme/upload.css
+++ b/theme/upload.css
@@ -125,7 +125,7 @@
 }
 .el-progress__text{
     font-size: 14px;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     display: inline-block;
     vertical-align: middle;
     margin-left: 10px;
@@ -174,7 +174,7 @@
 .el-progress-bar__outer{
     height: 6px;
     border-radius: 100px;
-    background-color: rgb(228, 233, 241);
+    background-color: rgb(241, 229, 228);
     overflow: hidden;
     position: relative;
     vertical-align: middle;
@@ -185,7 +185,7 @@
     top: 0;
     height: 100%;
     border-radius: 2px 0 0 2px;
-    background-color: #222d32;
+    background-color: #FFC0CB;
     text-align: right;
     border-radius: 100px;
     line-height: 1;
@@ -318,7 +318,7 @@
 
 .el-upload__tip{
     font-size: 12px;
-    color: rgb(131, 148, 165);
+    color: rgb(165, 131, 131);
     margin-top: 7px;
 }
 
@@ -340,8 +340,8 @@
 }
 
 .el-upload--picture-card:hover{
-    border-color: #222d32;
-    color: #222d32;
+    border-color: #FFC0CB;
+    color: #FFC0CB;
 }
 
 .el-upload-dragger{
@@ -358,19 +358,19 @@
 }
 
 .el-upload-dragger .el-upload__text{
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
     font-size: 14px;
     text-align: center
 }
 
 .el-upload-dragger .el-upload__text em{
-    color: #222d32;
+    color: #FFC0CB;
     font-style: normal;
 }
 
 .el-upload-dragger .el-icon-upload{
     font-size: 67px;
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
     margin: 40px 0 16px;
     line-height: 50px;
 }
@@ -380,18 +380,18 @@
 }
 
 .el-upload-dragger ~ .el-upload__files{
-    border-top: 1px solid rgba(191, 206, 217, 0.2);
+    border-top: 1px solid rgba(217, 191, 193, 0.2);
     margin-top: 7px;
     padding-top: 5px;
 }
 
 .el-upload-dragger:hover{
-    border-color: #222d32;
+    border-color: #FFC0CB;
 }
 
 .el-upload-dragger.is-dragover{
     background-color: rgba(32, 159, 255, .06);
-    border: 2px dashed #222d32;
+    border: 2px dashed #FFC0CB;
 }
 
 .el-upload-list{
@@ -403,7 +403,7 @@
 .el-upload-list__item{
     transition: all .5s cubic-bezier(.55,0,.1,1);
     font-size: 14px;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     line-height: 1.8;
     margin-top: 5px;
     position: relative;
@@ -446,7 +446,7 @@
     right: 5px;
     cursor: pointer;
     opacity: .75;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     transform: scale(.7);
 }
 
@@ -455,7 +455,7 @@
 }
 
 .el-upload-list__item:hover{
-    background-color: rgb(238, 242, 246);
+    background-color: rgb(246, 238, 238);
 }
 
 .el-upload-list__item:hover .el-icon-close{
@@ -471,7 +471,7 @@
 }
 
 .el-upload-list__item.is-success .el-upload-list__item-name:hover{
-    color: #222d32;
+    color: #FFC0CB;
     cursor: pointer;
 }
 
@@ -480,7 +480,7 @@
 }
 
 .el-upload-list__item-name{
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     display: block;
     margin-right: 40px;
     overflow: hidden;
@@ -491,7 +491,7 @@
 }
 
 .el-upload-list__item-name [class^="el-icon"] {
-    color: rgb(151, 171, 190);
+    color: rgb(190, 151, 152);
     margin-right: 7px;
     height: 100%;
     line-height: inherit;
@@ -510,12 +510,12 @@
     right: 10px;
     top: 0;
     font-size: 12px;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
     display: none;
 }
 
 .el-upload-list__item-delete:hover{
-    color: #222d32;
+    color: #FFC0CB;
 }
 
 .el-upload-list--picture-card{
@@ -837,95 +837,95 @@
     margin: 0;
     line-height: 36px;
     font-size: 14px;
-    color: rgb(72, 90, 106);
+    color: rgb(106, 72, 73);
 }
 :root{
     /* Transition
-    -------------------------- */
+  -------------------------- */
     /* Colors
-    -------------------------- */
+  -------------------------- */
     /* Link
-    -------------------------- */
+  -------------------------- */
     /* Border
-    -------------------------- */
+  -------------------------- */
     /* Box-shadow
-    -------------------------- */
+  -------------------------- */
     /* Fill
-    -------------------------- */
+  -------------------------- */
     /* Font
-    -------------------------- */
+  -------------------------- */
     /* Size
-    -------------------------- */
+  -------------------------- */
     /* z-index
-    -------------------------- */
+  -------------------------- */
     /* Disable base
-    -------------------------- */
+  -------------------------- */
     /* Icon
-    -------------------------- */
+  -------------------------- */
     /* Checkbox
-    -------------------------- */
+  -------------------------- */
     /* Radio
-    -------------------------- */
+  -------------------------- */
     /* Select
-    -------------------------- */
+  -------------------------- */
     /* Alert
-    -------------------------- */
+  -------------------------- */
     /* Message Box
-    -------------------------- */
+  -------------------------- */
     /* Message
-    -------------------------- */
+  -------------------------- */
     /* Notification
-    -------------------------- */
+  -------------------------- */
     /* Input
-    -------------------------- */
+  -------------------------- */
     /* Cascader
-    -------------------------- */
+  -------------------------- */
     /* Group
-    -------------------------- */
+  -------------------------- */
     /* Tab
-    -------------------------- */
+  -------------------------- */
     /* Button
-    -------------------------- */
+  -------------------------- */
     /* cascader
-    -------------------------- */
+  -------------------------- */
     /* Switch
-   -------------------------- */
+ -------------------------- */
     /* Dialog
-   -------------------------- */
+ -------------------------- */
     /* Table
-   -------------------------- */
+ -------------------------- */
     /* Pagination
-   -------------------------- */
+ -------------------------- */
     /* Popover
-   -------------------------- */
+ -------------------------- */
     /* Tooltip
-    -------------------------- */
+  -------------------------- */
     /* Tag
-    -------------------------- */
+  -------------------------- */
     /* Dropdown
-    -------------------------- */
+  -------------------------- */
     /* Badge
-    -------------------------- */
+  -------------------------- */
     /* Card
-    --------------------------*/
+  --------------------------*/
     /* Slider
-    --------------------------*/
+  --------------------------*/
     /* Steps
-    --------------------------*/
+  --------------------------*/
     /* Menu
-    --------------------------*/
+  --------------------------*/
     /* Rate
-    --------------------------*/
+  --------------------------*/
     /* DatePicker
-    --------------------------*/
+  --------------------------*/
     /* Loading
-    --------------------------*/
+  --------------------------*/
     /* Scrollbar
-    --------------------------*/
+  --------------------------*/
     /* Carousel
-    --------------------------*/
+  --------------------------*/
     /* Collapse
-    --------------------------*/
+  --------------------------*/
     /* Transfer
-    --------------------------*/
+  --------------------------*/
 }
